harden flow findings backlog: complete U1-U11 remediations

--- a/docs/flows/AUD-001.md
+++ b/docs/flows/AUD-001.md
@@ -144,5 +144,5 @@
 - Thread safety of quality EMA updates (updated from capture thread without sync)
 - Memory leak potential if stream not properly stopped
 - No handling for display disconnection during capture
-- Test gaps: Permission revocation during active capture, display changes</content>
-  <parameter name="filePath">/Users/pranay/Projects/EchoPanel/docs/flows/AUD-001.md
+- Test gaps: Permission revocation during active capture, display changes
+
