--- a/docs/flows/AUD-002.md
+++ b/docs/flows/AUD-002.md
@@ -144,5 +144,5 @@
 - Thread safety of level EMA updates
 - No handling for device changes during capture
 - Potential buffer overflow if processing slower than input
-- Test gaps: Device hot-swap, permission revocation during capture</content>
-  <parameter name="filePath">/Users/pranay/Projects/EchoPanel/docs/flows/AUD-002.md
+- Test gaps: Device hot-swap, permission revocation during capture
+
