--- a/docs/flows/AUD-003.md
+++ b/docs/flows/AUD-003.md
@@ -136,5 +136,5 @@
 - Failover events accumulate without cleanup (memory leak)
 - No hysteresis to prevent rapid switching
 - Silence threshold (2s) may be too sensitive for natural pauses
-- Test gaps: Long-running sessions, memory usage, thread safety</content>
-  <parameter name="filePath">/Users/pranay/Projects/EchoPanel/docs/flows/AUD-003.md
+- Test gaps: Long-running sessions, memory usage, thread safety
+
