--- a/docs/flows/AUD-004.md
+++ b/docs/flows/AUD-004.md
@@ -127,5 +127,5 @@
 - Encryption: Uses ws:// (not wss://) for localhost - is this acceptable?
 - Queue overflow handling: Dropping frames may cause gaps
 - Reconnection logic: Exponential backoff implementation details
-- Test gaps: Network interruption scenarios, queue overflow testing</content>
-  <parameter name="filePath">/Users/pranay/Projects/EchoPanel/docs/flows/AUD-004.md
+- Test gaps: Network interruption scenarios, queue overflow testing
+
