--- a/docs/flows/AUD-005.md
+++ b/docs/flows/AUD-005.md
@@ -112,5 +112,5 @@
 - Queue max size tuning: Default 48 may not be optimal
 - Backpressure warning throttling: Only sent once per session
 - Source dropping logic: When and how sources are selected for dropping
-- Test gaps: Queue overflow scenarios, metrics accuracy</content>
-  <parameter name="filePath">/Users/pranay/Projects/EchoPanel/docs/flows/AUD-005.md
+- Test gaps: Queue overflow scenarios, metrics accuracy
+
