--- a/docs/flows/AUD-006.md
+++ b/docs/flows/AUD-006.md
@@ -127,5 +127,4 @@
 - Partial results: Only finals emitted, no streaming partials
 - VAD filtering: Applied per chunk, may miss cross-chunk speech
 - Confidence calculation: Heuristic from avg_logprob
-- Test gaps: Model loading failures, threading concurrency</content>
-<parameter name="filePath">/Users/pranay/Projects/EchoPanel/docs/flows/AUD-006.md
+- Test gaps: Model loading failures, threading concurrency
