--- a/docs/flows/AUD-007.md
+++ b/docs/flows/AUD-007.md
@@ -121,5 +121,5 @@
 - Per-source diarization: Currently concatenates all sources, may not work well for mixed audio
 - Speaker naming: Simple sequential assignment, no persistence across sessions
 - Performance: Batch processing at end, may be slow for long sessions
-- Test gaps: HF token validation, pipeline loading failures, memory limits</content>
-  <parameter name="filePath">/Users/pranay/Projects/EchoPanel/docs/flows/AUD-007.md
+- Test gaps: HF token validation, pipeline loading failures, memory limits
+
