--- a/docs/flows/AUD-008.md
+++ b/docs/flows/AUD-008.md
@@ -3,7 +3,7 @@
 ## Summary
 
 - Origin: Code-only
-- Status: Partial
+- Status: Implemented
 - 1–2 sentence description: Detects USB audio device disconnection during active sessions and attempts automatic recovery by restarting audio capture with minimal interruption.
 - Boundaries crossed: OS (AVCaptureDevice notifications), UI (status updates), Process (recovery callbacks)
 - Primary components (coarse list): DeviceHotSwapManager, BroadcastFeatureManager, AppState
