--- a/docs/flows/AUD-009.md
+++ b/docs/flows/AUD-009.md
@@ -2,106 +2,74 @@
 
 ## Summary
 
-- Origin: Hypothesized
-- Status: Hypothesized
-- 1–2 sentence description: Compensates for clock drift between multiple audio sources (system + microphone) to maintain timestamp synchronization in dual-source sessions.
-- Boundaries crossed: OS (CACurrentMediaTime), Process (timestamp adjustment), Model (timestamp correction)
-- Primary components (coarse list): ws_live_listener.py, provider_faster_whisper.py, RedundantAudioCaptureManager
+- Origin: Mixed (audit hypothesis + code-grounded telemetry)
+- Status: Partial
+- Clock-drift compensation behavior is still unimplemented, but staged client flags and cross-source drift telemetry are now wired end-to-end.
+- Boundaries crossed: Client start contract / server ASR metrics / observability
+- Primary components (coarse list): WebSocketStreamer, BackendConfig, BroadcastFeatureManager, ws_live_listener.py
 
 ## Triggers and Preconditions
 
-- Triggers: Dual-source session start, periodic timestamp validation, drift detection threshold exceeded
-- Preconditions: Redundant audio enabled, both system and microphone sources active, session duration > threshold
+- Triggers: session `start` handshake and ongoing ASR final events in multi-source sessions
+- Preconditions: websocket session started; at least two active sources for non-zero spread metrics
 
-## Sequence (Happy Path)
+## Sequence (Current Behavior)
 
-1. **Shared monotonic clock initialization**
-   - At session start, capture CACurrentMediaTime as session_start_time
-   - Initialize source-relative timestamp offsets
+1. Client start payload now includes staged clock-drift flags under `client_features`.
    - Evidence:
-     - Code: Hypothesized - would require new timestamp manager
-     - Docs: docs/audit/streaming-reliability-dual-pipeline-20260210.md:70
-
-2. **Per-source timestamp tracking**
-   - Each source maintains processed_samples counter
-   - Convert to absolute timestamps using session_start_time + source_offset
+     - Code: `macapp/MeetingListenerApp/Sources/WebSocketStreamer.swift` :: `sendStart()` includes `client_features.clock_drift_compensation_enabled`
+     - Code: `macapp/MeetingListenerApp/Sources/BackendConfig.swift` :: `clockDriftCompensationEnabled`
+2. Server parses and stores client feature flags at session start.
    - Evidence:
-     - Code: provider_faster_whisper.py:125,154-157
-     - Docs: docs/audit/audio-industry-code-review-20260211.md:175
-
-3. **Drift detection**
-   - Compare absolute timestamps between sources periodically
-   - Calculate drift rate (samples/second difference)
+     - Code: `server/api/ws_live_listener.py` :: `_extract_client_features(...)`, start-message assignment to `SessionState`
+3. Server tracks latest ASR `t1` per source and computes spread telemetry.
    - Evidence:
-     - Code: Hypothesized - no drift monitoring implemented
-     - Docs: docs/flow-atlas-20260211.md:719
-
-4. **Offset adjustment**
-   - Apply linear correction to slower source timestamps
-   - Update source_offset to compensate accumulated drift
+     - Code: `server/api/ws_live_listener.py` :: `state.asr_last_t1_by_source`, `_update_source_clock_spread(...)`
+4. Metrics stream now emits `source_clock_spread_ms` and `max_source_clock_spread_ms`.
    - Evidence:
-     - Code: Hypothesized - CACurrentMediaTime usage needed
-     - Docs: docs/audit/streaming-reliability-dual-pipeline-20260210.md:70
-
-5. **Transcript reordering**
-   - Sort transcript segments by corrected absolute timestamps
-   - Maintain source attribution for diarization
+     - Code: `server/api/ws_live_listener.py` :: `_metrics_loop` payload fields
+5. Final summary includes drift telemetry snapshot and client feature flags.
    - Evidence:
-     - Code: Hypothesized - would modify ws_live_listener.py:773
-     - Docs: docs/audit/asr-provider-performance-20260211.md:558
+     - Code: `server/api/ws_live_listener.py` :: `final_summary.json.clock_spread_ms`, `final_summary.json.client_features`
 
 ## Inputs and Outputs
 
 - Inputs:
-  - CACurrentMediaTime readings
-  - Per-source processed_samples counters
-  - Session start timestamp
+  - ASR segment timestamps (`t1`) by source
+  - Client feature flags from start payload
 - Outputs:
-  - Corrected t0/t1 timestamps in ASR segments
-  - Drift metrics for observability
-- Side effects: Transcript segment reordering, timestamp adjustments
+  - Runtime spread metrics (`source_clock_spread_ms`, `max_source_clock_spread_ms`)
+  - Final summary drift snapshot
+- Side effects: observability improvements only; no timestamp correction/reordering logic added
 
 ## Failure Modes
 
-- Failure: Drift exceeds correction threshold
-  - Where detected: Drift calculation exceeds configurable limit
-  - Current handling: Hypothesized - no implementation
-  - User-visible outcome: Transcript segments out of chronological order
-  - Evidence: docs/audit/audio-industry-code-review-20260211.md:499
+- Failure: Single-source session
+  - Where detected: spread computation
+  - Current handling: spread metrics stay `0.0`
+  - User-visible outcome: no drift signal (expected)
+  - Evidence: `server/api/ws_live_listener.py` :: `_update_source_clock_spread`
 
-- Failure: Clock source instability
-  - Where detected: CACurrentMediaTime readings become non-monotonic
-  - Current handling: Hypothesized - no validation
-  - User-visible outcome: Timestamp jumps, transcript corruption
-  - Evidence: docs/audit/streaming-reliability-dual-pipeline-20260210.md:70
-
-- Failure: Source restart during session
-  - Where detected: Audio source failover resets processed_samples
-  - Current handling: Hypothesized - no continuity tracking
-  - User-visible outcome: Timestamp discontinuity after failover
-  - Evidence: docs/audit/AUDIT_04_BROADCAST_READINESS.md:97
-
-- Failure: NTP timestamp conflicts
-  - Where detected: NTP sync changes session reference time
-  - Current handling: Hypothesized - no NTP integration with audio timestamps
-  - User-visible outcome: Absolute timestamps become inconsistent
-  - Evidence: docs/IMPLEMENTATION_PLAN_Audio_Hardening.md:24
+- Failure: Client omits `client_features`
+  - Where detected: feature extraction
+  - Current handling: safe defaults to `False`
+  - User-visible outcome: unchanged behavior
+  - Evidence: `server/api/ws_live_listener.py` :: `_extract_client_features`
 
 ## Data and Storage
 
-- What data is produced/consumed: Session start time, source offsets, drift measurements
-- Where it is stored: In-memory session state, potentially persisted for debugging
-- Retention / deletion controls: Session-scoped, cleared on session end
+- What data is produced/consumed: per-source latest ASR timestamp and spread metrics
+- Where it is stored: in-memory `SessionState`; included in metrics events/final summary
+- Retention / deletion controls: session-scoped
 
 ## Observability
 
-- Logs/events emitted: Drift measurements, correction applications, threshold violations
-- Correlation IDs / session IDs: Session ID for tracking across sources
-- Metrics/traces: Drift rate, correction magnitude, timestamp discontinuities
-- Evidence: Hypothesized - no current implementation
+- Logs/events emitted: session-start log now includes staged feature flags
+- Correlation IDs / session IDs: existing websocket/session IDs unchanged
+- Metrics/traces: `source_clock_spread_ms`, `max_source_clock_spread_ms`
 
 ## Open Questions and Follow-up Tasks
 
-- Questions: What is acceptable drift threshold before correction? How to handle NTP sync during session?
-- Documentation gaps: Detailed timestamp math, CACurrentMediaTime integration
-- Test gaps: Long-duration dual-source sessions, NTP sync during recording, source failover timing
+- Questions: what drift threshold should trigger compensation action?
+- Documentation gaps: compensation algorithm choice (linear offset vs resampling), rollback policy
+- Test gaps: long-running dual-source drift benchmarks and threshold validation
