--- a/docs/flows/EXT-001.md
+++ b/docs/flows/EXT-001.md
@@ -126,5 +126,5 @@
 
 - Should onboarding persist partial progress across app restarts?
 - Validation of HF token format before saving?
-- Test gaps: Automated testing of permission flows, backend failure scenarios</content>
-  <parameter name="filePath">/Users/pranay/Projects/EchoPanel/docs/flows/EXT-001.md
+- Test gaps: Automated testing of permission flows, backend failure scenarios
+
