--- a/docs/flows/EXT-002.md
+++ b/docs/flows/EXT-002.md
@@ -92,5 +92,5 @@ List 5–10 realistic failures:
 
 - Questions that cannot be answered from current evidence: How does permission state persist across app restarts? What happens if user grants permission mid-session?
 - Documentation gaps to fill: Detailed macOS TCC behavior documentation
-- Test gaps to add (note only, no implementation): Test permission revocation during active session, test permission grant without restart</content>
-  <parameter name="filePath">/Users/pranay/Projects/EchoPanel/docs/flows/EXT-002.md
+- Test gaps to add (note only, no implementation): Test permission revocation during active session, test permission grant without restart
+
