--- a/docs/flows/EXT-003.md
+++ b/docs/flows/EXT-003.md
@@ -81,5 +81,5 @@ List 5–10 realistic failures:
 
 - Questions that cannot be answered from current evidence: How does permission state persist across app restarts? What happens if user grants permission mid-session?
 - Documentation gaps to fill: Detailed AVFoundation permission behavior documentation
-- Test gaps to add (note only, no implementation): Test permission revocation during active session</content>
-  <parameter name="filePath">/Users/pranay/Projects/EchoPanel/docs/flows/EXT-003.md
+- Test gaps to add (note only, no implementation): Test permission revocation during active session
+
