--- a/docs/flows/EXT-004.md
+++ b/docs/flows/EXT-004.md
@@ -132,5 +132,5 @@ List 5–10 realistic failures:
 
 - Questions that cannot be answered from current evidence: What happens to partial session state on failure? How are session slots released?
 - Documentation gaps to fill: Detailed concurrency controller behavior
-- Test gaps to add (note only, no implementation): Test session start with backend at capacity, test permission revocation mid-start</content>
-  <parameter name="filePath">/Users/pranay/Projects/EchoPanel/docs/flows/EXT-004.md
+- Test gaps to add (note only, no implementation): Test session start with backend at capacity, test permission revocation mid-start
+
