--- a/docs/flows/EXT-005.md
+++ b/docs/flows/EXT-005.md
@@ -137,5 +137,5 @@ List 5–10 realistic failures:
 
 - Questions that cannot be answered from current evidence: What happens to orphaned analysis tasks? How are session bundles cleaned up?
 - Documentation gaps to fill: Detailed timeout behavior and resource cleanup
-- Test gaps to add (note only, no implementation): Test stop with ASR timeout, test stop with WebSocket disconnect</content>
-  <parameter name="filePath">/Users/pranay/Projects/EchoPanel/docs/flows/EXT-005.md
+- Test gaps to add (note only, no implementation): Test stop with ASR timeout, test stop with WebSocket disconnect
+
