--- a/docs/flows/EXT-006.md
+++ b/docs/flows/EXT-006.md
@@ -93,5 +93,5 @@ List 5–10 realistic failures:
 
 - Questions that cannot be answered from current evidence: What data is included if export during active session vs after finalization?
 - Documentation gaps to fill: JSON schema documentation
-- Test gaps to add (note only, no implementation): Test export with various session states, test file write failures</content>
-  <parameter name="filePath">/Users/pranay/Projects/EchoPanel/docs/flows/EXT-006.md
+- Test gaps to add (note only, no implementation): Test export with various session states, test file write failures
+
