--- a/docs/flows/EXT-007.md
+++ b/docs/flows/EXT-007.md
@@ -86,5 +86,5 @@ List 5–10 realistic failures:
 
 - Questions that cannot be answered from current evidence: Difference between final summary and live render?
 - Documentation gaps to fill: Markdown format specification
-- Test gaps to add (note only, no implementation): Test export with/without final summary, test file write failures</content>
-  <parameter name="filePath">/Users/pranay/Projects/EchoPanel/docs/flows/EXT-007.md
+- Test gaps to add (note only, no implementation): Test export with/without final summary, test file write failures
+
