--- a/docs/flows/EXT-008.md
+++ b/docs/flows/EXT-008.md
@@ -113,5 +113,5 @@ List 5–10 realistic failures:
 
 - Questions that cannot be answered from current evidence: What is included in legacy fallback bundle?
 - Documentation gaps to fill: Debug bundle file format specification
-- Test gaps to add (note only, no implementation): Test bundle generation with missing data, test ZIP creation failures</content>
-  <parameter name="filePath">/Users/pranay/Projects/EchoPanel/docs/flows/EXT-008.md
+- Test gaps to add (note only, no implementation): Test bundle generation with missing data, test ZIP creation failures
+
