--- a/docs/flows/EXT-009.md
+++ b/docs/flows/EXT-009.md
@@ -91,5 +91,5 @@ List 5–10 realistic failures:
 
 - Questions that cannot be answered from current evidence: When do settings changes take effect? What validation exists?
 - Documentation gaps to fill: Settings persistence and validation rules
-- Test gaps to add (note only, no implementation): Test settings persistence, test invalid configurations</content>
-  <parameter name="filePath">/Users/pranay/Projects/EchoPanel/docs/flows/EXT-009.md
+- Test gaps to add (note only, no implementation): Test settings persistence, test invalid configurations
+
