--- a/docs/flows/EXT-010.md
+++ b/docs/flows/EXT-010.md
@@ -109,5 +109,5 @@ List 5–10 realistic failures:
 
 - Questions that cannot be answered from current evidence: What triggers session refresh? How are recoverable sessions handled?
 - Documentation gaps to fill: Session storage format specification
-- Test gaps to add (note only, no implementation): Test corrupted session data, test large session lists</content>
-  <parameter name="filePath">/Users/pranay/Projects/EchoPanel/docs/flows/EXT-010.md
+- Test gaps to add (note only, no implementation): Test corrupted session data, test large session lists
+
