--- a/docs/flows/EXT-011.md
+++ b/docs/flows/EXT-011.md
@@ -105,5 +105,5 @@ List 5–10 realistic failures:
 
 - Questions that cannot be answered from current evidence: When is recovery marker created? What data is in snapshot vs final snapshot?
 - Documentation gaps to fill: Recovery marker format and timing
-- Test gaps to add (note only, no implementation): Test recovery with corrupted marker, test recovery after normal session end</content>
-  <parameter name="filePath">/Users/pranay/Projects/EchoPanel/docs/flows/EXT-011.md
+- Test gaps to add (note only, no implementation): Test recovery with corrupted marker, test recovery after normal session end
+
