--- a/docs/flows/EXT-012.md
+++ b/docs/flows/EXT-012.md
@@ -120,5 +120,5 @@ List 5–10 realistic failures:
 
 - Questions that cannot be answered from current evidence: What happens during health check failures? How are external backends validated?
 - Documentation gaps to fill: Health check endpoint specification
-- Test gaps to add (note only, no implementation): Test port conflict detection, test health check with slow server</content>
-  <parameter name="filePath">/Users/pranay/Projects/EchoPanel/docs/flows/EXT-012.md
+- Test gaps to add (note only, no implementation): Test port conflict detection, test health check with slow server
+
