--- a/docs/flows/MOD-006.md
+++ b/docs/flows/MOD-006.md
@@ -107,5 +107,5 @@
 
 - Questions that cannot be answered from current evidence: Priority order for CUDA vs other GPUs
 - Documentation gaps: Device selection priority order, compute type compatibility matrix
-- Test gaps to add (note only, no implementation): Test device fallback on different platforms</content>
-  <parameter name="filePath">/Users/pranay/Projects/EchoPanel/docs/flows/MOD-006.md
+- Test gaps to add (note only, no implementation): Test device fallback on different platforms
+
