--- a/docs/flows/MOD-007.md
+++ b/docs/flows/MOD-007.md
@@ -103,5 +103,5 @@
 
 - Questions that cannot be answered from current evidence: Is degrade ladder fully integrated into main ASR loop?
 - Documentation gaps: Integration status, recovery thresholds
-- Test gaps to add (note only, no implementation): Test level transitions, action reversals, RTF history pruning</content>
-  <parameter name="filePath">/Users/pranay/Projects/EchoPanel/docs/flows/MOD-007.md
+- Test gaps to add (note only, no implementation): Test level transitions, action reversals, RTF history pruning
+
