--- a/docs/flows/MOD-008.md
+++ b/docs/flows/MOD-008.md
@@ -110,5 +110,5 @@
 
 - Questions that cannot be answered from current evidence: Are health metrics exposed to WebSocket clients?
 - Documentation gaps: Health metric update frequency, retention policies
-- Test gaps to add (note only, no implementation): Test health under load, concurrent requests, metric accuracy</content>
-  <parameter name="filePath">/Users/pranay/Projects/EchoPanel/docs/flows/MOD-008.md
+- Test gaps to add (note only, no implementation): Test health under load, concurrent requests, metric accuracy
+
