--- a/docs/flows/MOD-009.md
+++ b/docs/flows/MOD-009.md
@@ -106,5 +106,5 @@
 
 - Questions that cannot be answered from current evidence: Is VAD integrated into main ASR pipeline?
 - Documentation gaps: VAD accuracy metrics, optimal thresholds
-- Test gaps to add (note only, no implementation): Test VAD accuracy on different audio types, threshold tuning</content>
-  <parameter name="filePath">/Users/pranay/Projects/EchoPanel/docs/flows/MOD-009.md
+- Test gaps to add (note only, no implementation): Test VAD accuracy on different audio types, threshold tuning
+
