--- a/docs/flows/MOD-010.md
+++ b/docs/flows/MOD-010.md
@@ -102,5 +102,5 @@
 
 - Questions that cannot be answered from current evidence: Are there lock timeouts or try/finally blocks?
 - Documentation gaps: Lock contention monitoring, deadlock detection
-- Test gaps to add (note only, no implementation): Test concurrent inference, deadlock scenarios</content>
-  <parameter name="filePath">/Users/pranay/Projects/EchoPanel/docs/flows/MOD-010.md
+- Test gaps to add (note only, no implementation): Test concurrent inference, deadlock scenarios
+
