--- a/docs/flows/NET-001.md
+++ b/docs/flows/NET-001.md
@@ -3,112 +3,85 @@
 ## Summary
 
 - Origin: Code-only
-- Status: Hypothesized
-- Client establishes WebSocket connection to backend server for real-time audio streaming and ASR results.
-- Boundaries crossed: Network
-- Primary components (coarse list): WebSocketStreamer, BackendConfig, URLSessionWebSocketTask
+- Status: Implemented
+- The app opens `/ws/live-listener`, starts receive + ping loops, then sends `start` for a session.
+- Boundaries crossed: UI -> Network
+- Primary components (coarse list): AppState, WebSocketStreamer, BackendConfig
 
 ## Triggers and Preconditions
 
-- Triggers (user action, event, schedule, startup, etc.): AppState.startSession() calls streamer.connect()
-- Preconditions (permissions, settings flags, availability, model cached, etc.): Backend server running, network available, permissions granted
+- Triggers (user action, event, schedule, startup, etc.): `AppState.startSession()` calls `streamer.connect(...)`.
+- Preconditions (permissions, settings flags, availability, model cached, etc.): capture started, backend reachable, app has generated session/attempt IDs.
 
 ## Sequence (Happy Path)
 
-Use numbered sequence. Each step must include evidence.
-For each step:
-
-1. <what happens>
+1. Session start sets IDs and calls connect.
    - Evidence:
-     - Code: path :: symbol/event/string
-     - Docs: path :: heading/snippet
-   - Notes: (only if needed)
-
-1. startSession() calls streamer.connect(sessionID, attemptID)
+     - Code: `macapp/MeetingListenerApp/Sources/AppState.swift` :: `startSession()` -> `streamer.connect(sessionID:attemptID:)`
+2. `WebSocketStreamer.connect` creates correlation IDs and resets reconnect delay.
    - Evidence:
-     - Code: macapp/MeetingListenerApp/Sources/AppState.swift :: startSession() calls streamer.connect(sessionID: id, attemptID: currentAttemptId?.uuidString)
-   - Notes: Generates correlation IDs
-
-1. WebSocketStreamer.connect() builds URL from BackendConfig
+     - Code: `macapp/MeetingListenerApp/Sources/WebSocketStreamer.swift` :: `connect(sessionID:attemptID:)`
+3. WebSocket task is created from `BackendConfig.webSocketRequest` and resumed.
    - Evidence:
-     - Code: macapp/MeetingListenerApp/Sources/WebSocketStreamer.swift :: connect() uses BackendConfig.webSocketURL
-     - Code: macapp/MeetingListenerApp/Sources/BackendConfig.swift :: webSocketURL builds URL with scheme/host/port/path + token query param
-   - Notes: Uses ws:// for localhost, wss:// for remote
-
-1. Creates URLSessionWebSocketTask and resumes it
+     - Code: `macapp/MeetingListenerApp/Sources/WebSocketStreamer.swift` :: `task = session.webSocketTask(with: webSocketRequest)` + `task?.resume()`
+     - Code: `macapp/MeetingListenerApp/Sources/BackendConfig.swift` :: `webSocketRequest`
+4. Receive loop and ping loop start.
    - Evidence:
-     - Code: macapp/MeetingListenerApp/Sources/WebSocketStreamer.swift :: task = session.webSocketTask(with: url); task?.resume()
-   - Notes: URLSession configuration .default
-
-1. Starts receiveLoop() for incoming messages
+     - Code: `macapp/MeetingListenerApp/Sources/WebSocketStreamer.swift` :: `receiveLoop()` and `schedulePing()`
+5. `start` message is sent after a short delay.
    - Evidence:
-     - Code: macapp/MeetingListenerApp/Sources/WebSocketStreamer.swift :: receiveLoop() called in connect()
-   - Notes: Async recursive loop for receiving messages
-
-1. Schedules ping timer for health checks
+     - Code: `macapp/MeetingListenerApp/Sources/WebSocketStreamer.swift` :: `DispatchQueue.main.asyncAfter(...){ sendStart() }`
+6. Backend `status=streaming` moves UI from `.starting` to `.listening`.
    - Evidence:
-     - Code: macapp/MeetingListenerApp/Sources/WebSocketStreamer.swift :: schedulePing() called in connect()
-   - Notes: Ping/pong for connection health
-
-1. After 0.2s delay, sends "start" message
-   - Evidence:
-     - Code: macapp/MeetingListenerApp/Sources/WebSocketStreamer.swift :: DispatchQueue.main.asyncAfter(deadline: .now() + 0.2) { self?.sendStart() }
-   - Notes: Allows connection to establish before sending
-
-1. Backend acknowledges with status "streaming"
-   - Evidence:
-     - Docs: docs/WS_CONTRACT.md :: Server sends {"type":"status","state":"streaming"}
-   - Notes: Triggers sessionState = .listening in AppState
+     - Code: `macapp/MeetingListenerApp/Sources/WebSocketStreamer.swift` :: `handleJSON` status handling
+     - Code: `macapp/MeetingListenerApp/Sources/AppState.swift` :: `streamer.onStatus` sets `sessionState = .listening`
 
 ## Inputs and Outputs
 
-- Inputs: sessionID, attemptID
-- Outputs: WebSocket connection established, correlation IDs generated
-- Side effects (writes, network calls, model loads, UI state changes): Network connection opened, ping timer started, start message sent
+- Inputs: `session_id`, `attempt_id`, backend host/port config
+- Outputs: active WebSocket task, active receive/ping loops, `start` control frame
+- Side effects (writes, network calls, model loads, UI state changes): network connection opened, stream status updates, structured connection log emitted
 
 ## Failure Modes
 
-List 5–10 realistic failures:
+- Failure: Backend not reachable
+  - Where detected: WebSocket receive/send error path
+  - Current handling (as evidenced): `handleError` updates status to reconnecting and schedules reconnect
+  - User-visible outcome (if any): reconnecting state/message in panel
+  - Evidence: `macapp/MeetingListenerApp/Sources/WebSocketStreamer.swift` :: `handleError`, `reconnect`
 
-- Failure: Backend server not running
-  - Where detected: URLSessionWebSocketTask connection attempt
-  - Current handling (as evidenced): Connection fails, triggers reconnection logic
-  - User-visible outcome (if any): streamStatus = .reconnecting
-  - Evidence: Code: macapp/MeetingListenerApp/Sources/WebSocketStreamer.swift :: reconnection logic in receiveLoop error handling
+- Failure: Invalid URL components
+  - Where detected: URL build
+  - Current handling (as evidenced): hard failure via `fatalError`
+  - User-visible outcome (if any): app crash
+  - Evidence: `macapp/MeetingListenerApp/Sources/BackendConfig.swift` :: `guard let url = components.url else { fatalError(...) }`
 
-- Failure: Network unavailable
-  - Where detected: URLSessionWebSocketTask
-  - Current handling (as evidenced): Connection fails, exponential backoff retry
-  - User-visible outcome (if any): Reconnecting status
-  - Evidence: Code: macapp/MeetingListenerApp/Sources/WebSocketStreamer.swift :: reconnectDelay, maxReconnectDelay
+- Failure: Backend never ACKs streaming
+  - Where detected: startup timeout task
+  - Current handling (as evidenced): stop session and set runtime streaming error after 5s
+  - User-visible outcome (if any): setup/error state
+  - Evidence: `macapp/MeetingListenerApp/Sources/AppState.swift` :: `startTimeoutTask`
 
-- Failure: Invalid URL construction
-  - Where detected: BackendConfig.buildURL
-  - Current handling (as evidenced): fatalError if URL invalid
-  - User-visible outcome (if any): App crash
-  - Evidence: Code: macapp/MeetingListenerApp/Sources/BackendConfig.swift :: guard let url = components.url else { fatalError(...) }
-
-- Failure: Authentication token invalid
-  - Where detected: Backend server
-  - Current handling (as evidenced): Server closes with 1008, client reconnects
-  - User-visible outcome (if any): Reconnecting status
-  - Evidence: Docs: docs/WS_CONTRACT.md :: Unauthorized websocket behavior
+- Failure: Ping fails
+  - Where detected: ping callback
+  - Current handling (as evidenced): routes to `handleError` and reconnect flow
+  - User-visible outcome (if any): reconnecting state
+  - Evidence: `macapp/MeetingListenerApp/Sources/WebSocketStreamer.swift` :: `schedulePing`
 
 ## Data and Storage
 
-- What data is produced/consumed: CorrelationIDs (sessionId, attemptId, connectionId)
-- Where it is stored (DB/files/userData/etc.): In-memory in WebSocketStreamer
-- Retention / deletion controls (if documented): None, per connection
+- What data is produced/consumed: `CorrelationIDs(sessionId, attemptId, connectionId)`
+- Where it is stored (DB/files/userData/etc.): in-memory on `WebSocketStreamer`
+- Retention / deletion controls (if documented): reset on disconnect/session end
 
 ## Observability
 
-- Logs/events emitted: Structured logging with correlation IDs
-- Correlation IDs / session IDs (if any): session_id, attempt_id, connection_id
-- Metrics/traces (if any): None evidenced
+- Logs/events emitted: structured `WebSocket connecting` log and websocket start event
+- Correlation IDs / session IDs (if any): session/attempt/connection IDs propagated in message + logger context
+- Metrics/traces (if any): none dedicated to connect latency in current client code
 
 ## Open Questions and Follow-up Tasks
 
-- Questions that cannot be answered from current evidence: What happens if ping fails?
-- Documentation gaps to fill: Ping/pong failure handling
-- Test gaps to add (note only, no implementation): Test connection establishment with invalid server</content>
-  <parameter name="filePath">/Users/pranay/Projects/EchoPanel/docs/flows/NET-001.md
+- Questions that cannot be answered from current evidence: none
+- Documentation gaps to fill: none for current client connection contract
+- Test gaps to add (note only, no implementation): explicit startup-timeout test for delayed backend ACK
