--- a/docs/flows/NET-002.md
+++ b/docs/flows/NET-002.md
@@ -3,100 +3,72 @@
 ## Summary
 
 - Origin: Code-only
-- Status: Hypothesized
-- Client includes authentication token in WebSocket URL query parameter for backend access control.
-- Boundaries crossed: Network
-- Primary components (coarse list): BackendConfig, KeychainHelper, WebSocketStreamer
+- Status: Implemented
+- The client authenticates websocket requests via headers, not URL query token.
+- Boundaries crossed: Security / Network
+- Primary components (coarse list): BackendConfig, KeychainHelper, WebSocketStreamer, ws_live_listener
 
 ## Triggers and Preconditions
 
-- Triggers (user action, event, schedule, startup, etc.): WebSocket connection establishment
-- Preconditions (permissions, settings flags, availability, model cached, etc.): Backend token stored in keychain, ECHOPANEL_WS_AUTH_TOKEN not set
+- Triggers (user action, event, schedule, startup, etc.): websocket connect attempt
+- Preconditions (permissions, settings flags, availability, model cached, etc.): optional token in keychain; backend may enforce `ECHOPANEL_WS_AUTH_TOKEN`
 
 ## Sequence (Happy Path)
 
-Use numbered sequence. Each step must include evidence.
-For each step:
-
-1. <what happens>
+1. `BackendConfig.webSocketURL` builds endpoint URL without query auth.
    - Evidence:
-     - Code: path :: symbol/event/string
-     - Docs: path :: heading/snippet
-   - Notes: (only if needed)
-
-1. BackendConfig.webSocketURL calls buildURL with includeToken: true
+     - Code: `macapp/MeetingListenerApp/Sources/BackendConfig.swift` :: `webSocketURL` -> `buildURL(path: "/ws/live-listener")`
+2. `BackendConfig.webSocketRequest` loads keychain token and sets headers.
    - Evidence:
-     - Code: macapp/MeetingListenerApp/Sources/BackendConfig.swift :: static var webSocketURL: URL { buildURL(path: "/ws/live-listener", includeToken: true) }
-   - Notes: Always includes token for WS
-
-1. buildURL loads token from KeychainHelper
+     - Code: `macapp/MeetingListenerApp/Sources/BackendConfig.swift` :: sets `Authorization: Bearer ...` and `x-echopanel-token`
+3. `WebSocketStreamer` opens socket with this request object.
    - Evidence:
-     - Code: macapp/MeetingListenerApp/Sources/BackendConfig.swift :: if includeToken, let token = KeychainHelper.loadBackendToken()
-   - Notes: KeychainHelper.loadBackendToken()
-
-1. Token added as query parameter ?token=...
+     - Code: `macapp/MeetingListenerApp/Sources/WebSocketStreamer.swift` :: `session.webSocketTask(with: webSocketRequest)`
+4. Server extracts auth token (query/header/bearer fallback order) and validates against env token.
    - Evidence:
-     - Code: macapp/MeetingListenerApp/Sources/BackendConfig.swift :: components.queryItems = [URLQueryItem(name: "token", value: token)]
-   - Notes: Only if token exists and not empty
-
-1. WebSocket connects with authenticated URL
-   - Evidence:
-     - Code: macapp/MeetingListenerApp/Sources/WebSocketStreamer.swift :: task = session.webSocketTask(with: url)
-   - Notes: URL includes token in query
-
-1. Backend validates token from query parameter
-   - Evidence:
-     - Docs: docs/WS_CONTRACT.md :: Accepted token inputs (priority order): 1) ?token=... query parameter
-   - Notes: Server-side validation
-
-1. If valid, connection proceeds; if invalid, server closes with 1008
-   - Evidence:
-     - Docs: docs/WS_CONTRACT.md :: Unauthorized websocket behavior: sends error status, closes with 1008
-   - Notes: Client detects closure and may retry
+     - Code: `server/api/ws_live_listener.py` :: `_extract_ws_auth_token`, `_is_ws_authorized`
+     - Docs: `docs/WS_CONTRACT.md` :: Authentication
 
 ## Inputs and Outputs
 
-- Inputs: Backend token from keychain
-- Outputs: Authenticated WebSocket URL
-- Side effects (writes, network calls, model loads, UI state changes): Token included in network request
+- Inputs: keychain token (optional), backend env token (optional)
+- Outputs: authenticated websocket request or unauthorized close path
+- Side effects (writes, network calls, model loads, UI state changes): auth headers included on websocket handshake
 
 ## Failure Modes
 
-List 5–10 realistic failures:
+- Failure: Keychain token missing while server requires auth
+  - Where detected: server authorization check
+  - Current handling (as evidenced): server emits error status and closes with `1008`
+  - User-visible outcome (if any): reconnecting/error state in app
+  - Evidence: `server/api/ws_live_listener.py` :: unauthorized websocket handling
 
-- Failure: No token in keychain
-  - Where detected: KeychainHelper.loadBackendToken()
-  - Current handling (as evidenced): Returns nil, no query param added
-  - User-visible outcome (if any): Connection succeeds if server allows unauthenticated
-  - Evidence: Code: macapp/MeetingListenerApp/Sources/BackendConfig.swift :: let token = KeychainHelper.loadBackendToken()
+- Failure: Keychain token empty string
+  - Where detected: client request build
+  - Current handling (as evidenced): headers not set due `!token.isEmpty` guard
+  - User-visible outcome (if any): same as missing token when auth required
+  - Evidence: `macapp/MeetingListenerApp/Sources/BackendConfig.swift` :: `if let token ... !token.isEmpty`
 
-- Failure: Token invalid/expired
-  - Where detected: Backend server validation
-  - Current handling (as evidenced): Server closes connection with 1008
-  - User-visible outcome (if any): Connection fails, client retries
-  - Evidence: Docs: docs/WS_CONTRACT.md :: Unauthorized websocket behavior
-
-- Failure: Token empty string
-  - Where detected: BackendConfig.buildURL
-  - Current handling (as evidenced): !token.isEmpty check, no query param
-  - User-visible outcome (if any): No authentication sent
-  - Evidence: Code: macapp/MeetingListenerApp/Sources/BackendConfig.swift :: !token.isEmpty
+- Failure: Invalid token
+  - Where detected: server compare-digest
+  - Current handling (as evidenced): unauthorized close (1008)
+  - User-visible outcome (if any): reconnect loop until corrected
+  - Evidence: `server/api/ws_live_listener.py` :: `hmac.compare_digest(...)`
 
 ## Data and Storage
 
-- What data is produced/consumed: Backend token string
-- Where it is stored (DB/files/userData/etc.): macOS Keychain via KeychainHelper
-- Retention / deletion controls (if documented): None evidenced
+- What data is produced/consumed: backend auth token
+- Where it is stored (DB/files/userData/etc.): macOS Keychain via `KeychainHelper`
+- Retention / deletion controls (if documented): keychain-managed
 
 ## Observability
 
-- Logs/events emitted: None evidenced for auth specifically
-- Correlation IDs / session IDs (if any): None
-- Metrics/traces (if any): None evidenced
+- Logs/events emitted: server unauthorized status message; client status/error propagation
+- Correlation IDs / session IDs (if any): normal websocket correlation IDs still apply
+- Metrics/traces (if any): none specific to auth success/failure counters
 
 ## Open Questions and Follow-up Tasks
 
-- Questions that cannot be answered from current evidence: How is token initially set in keychain?
-- Documentation gaps to fill: Token provisioning flow
-- Test gaps to add (note only, no implementation): Test connection with invalid token</content>
-  <parameter name="filePath">/Users/pranay/Projects/EchoPanel/docs/flows/NET-002.md
+- Questions that cannot be answered from current evidence: none
+- Documentation gaps to fill: align WS contract text to explicitly call out header-first client behavior with query fallback for compatibility
+- Test gaps to add (note only, no implementation): integration test proving header auth succeeds when query token omitted
