--- a/docs/flows/NET-004.md
+++ b/docs/flows/NET-004.md
@@ -3,106 +3,80 @@
 ## Summary
 
 - Origin: Code-only
-- Status: Hypothesized
-- Client receives ASR transcription results (partial and final) from backend via WebSocket.
-- Boundaries crossed: Network
-- Primary components (coarse list): WebSocketStreamer, AppState
+- Status: Implemented
+- WebSocket ASR/status/events are parsed and propagated to app state + side panel rendering.
+- Boundaries crossed: Network -> UI state
+- Primary components (coarse list): WebSocketStreamer, AppState, SidePanelView
 
 ## Triggers and Preconditions
 
-- Triggers (user action, event, schedule, startup, etc.): Backend processes audio and sends ASR results
-- Preconditions (permissions, settings flags, availability, model cached, etc.): WebSocket connected, audio transmitted
+- Triggers (user action, event, schedule, startup, etc.): backend emits websocket events (`status`, `asr_partial`, `asr_final`, etc.)
+- Preconditions (permissions, settings flags, availability, model cached, etc.): active websocket receive loop
 
 ## Sequence (Happy Path)
 
-Use numbered sequence. Each step must include evidence.
-For each step:
-
-1. <what happens>
+1. Receive loop gets message and dispatches handler.
    - Evidence:
-     - Code: path :: symbol/event/string
-     - Docs: path :: heading/snippet
-   - Notes: (only if needed)
-
-1. Backend sends ASR message over WebSocket
+     - Code: `macapp/MeetingListenerApp/Sources/WebSocketStreamer.swift` :: `receiveLoop()` -> `handle(_:)`
+2. JSON envelope is parsed and switched by `type`.
    - Evidence:
-     - Docs: docs/WS_CONTRACT.md :: `asr_partial` / `asr_final` message format
-   - Notes: JSON with text, timestamps, confidence, source
-
-1. WebSocketStreamer.receiveLoop receives message
+     - Code: `macapp/MeetingListenerApp/Sources/WebSocketStreamer.swift` :: `handleJSON(_:)`
+3. `asr_partial` and `asr_final` invoke app callbacks on main queue.
    - Evidence:
-     - Code: macapp/MeetingListenerApp/Sources/WebSocketStreamer.swift :: receiveLoop() async recursive
-   - Notes: Processes incoming URLSessionWebSocketTask.Message
-
-1. Message parsed as JSON, type checked
+     - Code: `macapp/MeetingListenerApp/Sources/WebSocketStreamer.swift` :: `onASRPartial?`, `onASRFinal?`
+4. App state updates transcript, deduplicates/filters, and bumps revision.
    - Evidence:
-     - Code: macapp/MeetingListenerApp/Sources/WebSocketStreamer.swift :: guard let json = try? JSONSerialization.jsonObject, let type = json["type"] as? String
-   - Notes: Handles asr_partial and asr_final
-
-1. Callback invoked: onASRPartial or onASRFinal
+     - Code: `macapp/MeetingListenerApp/Sources/AppState.swift` :: `handlePartial(...)`, `handleFinal(...)`, `bumpTranscriptRevision()`
+5. Side panel reacts to transcript count/revision changes, updates focus/scroll behavior.
    - Evidence:
-     - Code: macapp/MeetingListenerApp/Sources/WebSocketStreamer.swift :: onASRPartial?(text, t0, t1, confidence, source)
-   - Notes: Passes parsed data to AppState
-
-1. AppState.handlePartial or handleFinal updates transcript
-   - Evidence:
-     - Code: macapp/MeetingListenerApp/Sources/AppState.swift :: handlePartial/handleFinal methods
-   - Notes: Updates transcriptSegments, bumps revision
-
-1. UI updates with new transcript text
-   - Evidence:
-     - Code: macapp/MeetingListenerApp/Sources/AppState.swift :: transcriptSegments @Published
-   - Notes: Hypothesized - SwiftUI reactive update
+     - Code: `macapp/MeetingListenerApp/Sources/SidePanelView.swift` :: `.onChange(of: appState.transcriptSegments.count)` and `.onChange(of: appState.transcriptRevision)`
 
 ## Inputs and Outputs
 
-- Inputs: WebSocket message with ASR data
-- Outputs: Transcript segments updated
-- Side effects (writes, network calls, model loads, UI state changes): UI transcript display updated, revision bumped
+- Inputs: websocket ASR/status/event JSON
+- Outputs: updated transcript segments + derived UI surfaces
+- Side effects (writes, network calls, model loads, UI state changes): transcript list mutation, focus/follow-live updates, summary notification path on `final_summary`
 
 ## Failure Modes
 
-List 5–10 realistic failures:
+- Failure: Malformed/non-JSON message
+  - Where detected: JSON parse guard
+  - Current handling (as evidenced): message ignored
+  - User-visible outcome (if any): missed update
+  - Evidence: `macapp/MeetingListenerApp/Sources/WebSocketStreamer.swift` :: `guard let object = try? ... else { return }`
 
-- Failure: Invalid JSON message
-  - Where detected: JSONSerialization.jsonObject
-  - Current handling (as evidenced): try? , message ignored
-  - User-visible outcome (if any): ASR result lost
-  - Evidence: Code: macapp/MeetingListenerApp/Sources/WebSocketStreamer.swift :: guard let json = try? JSONSerialization.jsonObject
+- Failure: Missing fields in ASR payload
+  - Where detected: typed field extraction
+  - Current handling (as evidenced): defaults (`""`, `0`, fallback confidence) used
+  - User-visible outcome (if any): degraded segment fidelity
+  - Evidence: `macapp/MeetingListenerApp/Sources/WebSocketStreamer.swift` :: `as? ... ?? ...` patterns
 
-- Failure: Missing required fields
-  - Where detected: JSON parsing
-  - Current handling (as evidenced): as? String/Double casts, nil if missing
-  - User-visible outcome (if any): Partial data or ignored
-  - Evidence: Code: macapp/MeetingListenerApp/Sources/WebSocketStreamer.swift :: let text = json["text"] as? String
+- Failure: Duplicate/low-quality finals
+  - Where detected: `handleFinal`
+  - Current handling (as evidenced): skips duplicates and very low-confidence short finals
+  - User-visible outcome (if any): reduced transcript noise
+  - Evidence: `macapp/MeetingListenerApp/Sources/AppState.swift` :: duplicate + hallucination guards in `handleFinal`
 
-- Failure: WebSocket receive error
-  - Where detected: receiveLoop
-  - Current handling (as evidenced): Logs error, may trigger reconnection
-  - User-visible outcome (if any): Connection status changes
-  - Evidence: Code: macapp/MeetingListenerApp/Sources/WebSocketStreamer.swift :: catch { NSLog("WebSocket receive error: \(error)") }
-
-- Failure: Transcript update fails
-  - Where detected: AppState.handlePartial/handleFinal
-  - Current handling (as evidenced): Updates arrays, assumes success
-  - User-visible outcome (if any): UI not updated
-  - Evidence: Hypothesized
+- Failure: Receive error
+  - Where detected: receive loop failure branch
+  - Current handling (as evidenced): reconnect path via `handleError`
+  - User-visible outcome (if any): reconnecting status
+  - Evidence: `macapp/MeetingListenerApp/Sources/WebSocketStreamer.swift` :: `case .failure(let error): self.handleError(error)`
 
 ## Data and Storage
 
-- What data is produced/consumed: Transcript text, timestamps, confidence, source
-- Where it is stored (DB/files/userData/etc.): In-memory transcriptSegments array
-- Retention / deletion controls (if documented): None, in-memory only
+- What data is produced/consumed: transcript segments, source timestamps, summary payload
+- Where it is stored (DB/files/userData/etc.): in-memory `AppState` collections; appended to session store for finals
+- Retention / deletion controls (if documented): cleared/reset on session reset/end
 
 ## Observability
 
-- Logs/events emitted: None evidenced for individual results
-- Correlation IDs / session IDs (if any): None
-- Metrics/traces (if any): asrLastSeenBySource timestamps
+- Logs/events emitted: stream status changes; structured warnings/errors on network failures
+- Correlation IDs / session IDs (if any): carried in websocket context + session state
+- Metrics/traces (if any): per-source last-seen timestamps and ASR event counts in app state
 
 ## Open Questions and Follow-up Tasks
 
-- Questions that cannot be answered from current evidence: How are partial vs final segments differentiated in UI?
-- Documentation gaps to fill: Transcript rendering logic
-- Test gaps to add (note only, no implementation): Test malformed ASR message handling</content>
-  <parameter name="filePath">/Users/pranay/Projects/EchoPanel/docs/flows/NET-004.md
+- Questions that cannot be answered from current evidence: none
+- Documentation gaps to fill: none
+- Test gaps to add (note only, no implementation): malformed message and partial/final edge-case regression tests
