--- a/docs/flows/NET-005.md
+++ b/docs/flows/NET-005.md
@@ -3,100 +3,75 @@
 ## Summary
 
 - Origin: Code-only
-- Status: Hypothesized
-- Client handles WebSocket disconnection, cleans up resources, and may attempt reconnection.
-- Boundaries crossed: Network
-- Primary components (coarse list): WebSocketStreamer, AppState
+- Status: Implemented
+- Session stop path flushes final summary with timeout, then cleans up websocket/capture/session state.
+- Boundaries crossed: UI -> Network -> Storage
+- Primary components (coarse list): AppState, WebSocketStreamer, SessionStore, SidePanelController
 
 ## Triggers and Preconditions
 
-- Triggers (user action, event, schedule, startup, etc.): stopSession() called, or network error, or server closes connection
-- Preconditions (permissions, settings flags, availability, model cached, etc.): WebSocket was connected
+- Triggers (user action, event, schedule, startup, etc.): user stops listening, side panel window close, startup timeout/error path
+- Preconditions (permissions, settings flags, availability, model cached, etc.): session is `.starting` or `.listening`
 
 ## Sequence (Happy Path)
 
-Use numbered sequence. Each step must include evidence.
-For each step:
-
-1. <what happens>
+1. Session stop is triggered.
    - Evidence:
-     - Code: path :: symbol/event/string
-     - Docs: path :: heading/snippet
-   - Notes: (only if needed)
-
-1. stopSession() calls streamer.disconnect()
+     - Code: `macapp/MeetingListenerApp/Sources/MeetingListenerApp.swift` :: `toggleSession()` stop branch
+     - Code: `macapp/MeetingListenerApp/Sources/SidePanelController.swift` :: `windowWillClose` calls `onEndSession`
+2. `AppState.stopSession()` transitions to `.finalizing` and stops timers.
    - Evidence:
-     - Code: macapp/MeetingListenerApp/Sources/AppState.swift :: stopSession() calls streamer.disconnect()
-   - Notes: Intentional disconnect
-
-1. WebSocketStreamer.disconnect() sends "stop" message
+     - Code: `macapp/MeetingListenerApp/Sources/AppState.swift` :: `stopSession()`
+3. Capture managers stop; websocket stop is requested with final-summary wait.
    - Evidence:
-     - Code: macapp/MeetingListenerApp/Sources/WebSocketStreamer.swift :: sendStop() sends {"type":"stop","session_id":"..."}
-   - Notes: Flushes ASR, cancels analysis
-
-1. Cancels pending send operations
+     - Code: `macapp/MeetingListenerApp/Sources/AppState.swift` :: `audioCapture.stopCapture`, `micCapture.stopCapture`, `streamer.stopAndAwaitFinalSummary(timeout: 10)`
+4. `WebSocketStreamer.stopAndAwaitFinalSummary` sends `stop`, waits for `final_summary` or timeout, then closes task and ping.
    - Evidence:
-     - Code: macapp/MeetingListenerApp/Sources/WebSocketStreamer.swift :: sendQueue.cancelAllOperations()
-   - Notes: P0: Prevent blocking on network stall
-
-1. Cancels WebSocket task with .goingAway
+     - Code: `macapp/MeetingListenerApp/Sources/WebSocketStreamer.swift` :: `stopAndAwaitFinalSummary(timeout:)`
+5. App records finalization outcome, saves session data, clears runtime state.
    - Evidence:
-     - Code: macapp/MeetingListenerApp/Sources/WebSocketStreamer.swift :: task?.cancel(with: .goingAway, reason: nil)
-   - Notes: Clean closure
-
-1. Cancels ping timer
-   - Evidence:
-     - Code: macapp/MeetingListenerApp/Sources/WebSocketStreamer.swift :: pingTimer?.invalidate()
-   - Notes: Stops health checks
-
-1. Backend processes stop, sends final_summary, closes connection
-   - Evidence:
-     - Docs: docs/WS_CONTRACT.md :: `stop` message, server closes socket
-   - Notes: Runs finalization analysis
+     - Code: `macapp/MeetingListenerApp/Sources/AppState.swift` :: `finalizationOutcome`, `sessionStore.endSession(...)`, context resets
 
 ## Inputs and Outputs
 
-- Inputs: Disconnect trigger (user action or error)
-- Outputs: WebSocket closed, resources cleaned up
-- Side effects (writes, network calls, model loads, UI state changes): Stop message sent, connection closed, timers cancelled
+- Inputs: stop intent, live session IDs, pending websocket state
+- Outputs: final summary outcome (`complete` or timeout/error), idle app state
+- Side effects (writes, network calls, model loads, UI state changes): stop frame over websocket, persistence to session store, summary notification
 
 ## Failure Modes
 
-List 5–10 realistic failures:
+- Failure: Backend never sends final summary
+  - Where detected: stop-and-wait timeout
+  - Current handling (as evidenced): outcome set to `.incompleteTimeout`, session still closes cleanly
+  - User-visible outcome (if any): finalized with timeout notice semantics
+  - Evidence: `macapp/MeetingListenerApp/Sources/AppState.swift` :: `didReceiveFinal` branch
 
-- Failure: Send stop fails
-  - Where detected: sendStop
-  - Current handling (as evidenced): try? , silent failure
-  - User-visible outcome (if any): Stop not sent, but connection still closes
-  - Evidence: Code: macapp/MeetingListenerApp/Sources/WebSocketStreamer.swift :: try? task?.send(.string(jsonString))
+- Failure: Stop invoked while session not active
+  - Where detected: guard in `stopSession`
+  - Current handling (as evidenced): no-op
+  - User-visible outcome (if any): unchanged state
+  - Evidence: `macapp/MeetingListenerApp/Sources/AppState.swift` :: guard on session state
 
-- Failure: Task cancel fails
-  - Where detected: disconnect
-  - Current handling (as evidenced): Optional chaining, ignores failure
-  - User-visible outcome (if any): Resources not cleaned
-  - Evidence: Code: macapp/MeetingListenerApp/Sources/WebSocketStreamer.swift :: task?.cancel(with: .goingAway, reason: nil)
-
-- Failure: Backend doesn't close cleanly
-  - Where detected: Client side
-  - Current handling (as evidenced): None, assumes closure
-  - User-visible outcome (if any): Connection may linger
-  - Evidence: Hypothesized
+- Failure: Explicit disconnect path with pending send operations
+  - Where detected: `disconnect()` call path
+  - Current handling (as evidenced): send queue cancelled, websocket closed, ping stopped
+  - User-visible outcome (if any): immediate teardown
+  - Evidence: `macapp/MeetingListenerApp/Sources/WebSocketStreamer.swift` :: `disconnect()`
 
 ## Data and Storage
 
-- What data is produced/consumed: Session ID for stop message
-- Where it is stored (DB/files/userData/etc.): In-memory in WebSocketStreamer
-- Retention / deletion controls (if documented): None
+- What data is produced/consumed: finalization state, transcript/actions/decisions/risks/entities payload
+- Where it is stored (DB/files/userData/etc.): `SessionStore` + optional session bundle artifacts
+- Retention / deletion controls (if documented): managed by session store lifecycle
 
 ## Observability
 
-- Logs/events emitted: Structured logging for disconnect
-- Correlation IDs / session IDs (if any): session_id
-- Metrics/traces (if any): None evidenced
+- Logs/events emitted: structured `Session finalizing` and `Session ended` logs
+- Correlation IDs / session IDs (if any): session ID attached to shutdown logs and bundle/session writes
+- Metrics/traces (if any): no dedicated disconnect latency metric in current client
 
 ## Open Questions and Follow-up Tasks
 
-- Questions that cannot be answered from current evidence: What triggers automatic reconnection vs clean disconnect?
-- Documentation gaps to fill: Reconnection decision logic
-- Test gaps to add (note only, no implementation): Test disconnect cleanup</content>
-  <parameter name="filePath">/Users/pranay/Projects/EchoPanel/docs/flows/NET-005.md
+- Questions that cannot be answered from current evidence: none
+- Documentation gaps to fill: none
+- Test gaps to add (note only, no implementation): session stop under forced network failure
