--- a/docs/flows/NET-007.md
+++ b/docs/flows/NET-007.md
@@ -118,5 +118,5 @@ List 5–10 realistic failures:
 
 - Questions that cannot be answered from current evidence: Does client implement any rate limiting based on backpressure?
 - Documentation gaps to fill: Client-side backpressure response behavior
-- Test gaps to add (note only, no implementation): Load test to verify backpressure thresholds work correctly</content>
-  <parameter name="filePath">/Users/pranay/Projects/EchoPanel/docs/flows/NET-007.md
+- Test gaps to add (note only, no implementation): Load test to verify backpressure thresholds work correctly
+
