--- a/docs/flows/NET-008.md
+++ b/docs/flows/NET-008.md
@@ -116,5 +116,5 @@ List 5–10 realistic failures:
 
 - Questions that cannot be answered from current evidence: What is the ping timeout duration?
 - Documentation gaps to fill: Ping failure thresholds and timeout behavior
-- Test gaps to add (note only, no implementation): Test ping failure triggers reconnection</content>
-  <parameter name="filePath">/Users/pranay/Projects/EchoPanel/docs/flows/NET-008.md
+- Test gaps to add (note only, no implementation): Test ping failure triggers reconnection
+
