--- a/docs/flows/NET-009.md
+++ b/docs/flows/NET-009.md
@@ -117,5 +117,5 @@ List 5–10 realistic failures:
 
 - Questions that cannot be answered from current evidence: What TLS versions are supported?
 - Documentation gaps to fill: Server TLS configuration requirements
-- Test gaps to add (note only, no implementation): Test TLS certificate validation behavior</content>
-  <parameter name="filePath">/Users/pranay/Projects/EchoPanel/docs/flows/NET-009.md
+- Test gaps to add (note only, no implementation): Test TLS certificate validation behavior
+
