--- a/docs/flows/NET-010.md
+++ b/docs/flows/NET-010.md
@@ -117,5 +117,5 @@ List 5–10 realistic failures:
 
 - Questions that cannot be answered from current evidence: Should there be a maximum retry limit?
 - Documentation gaps to fill: Error classification and different recovery strategies
-- Test gaps to add (note only, no implementation): Test various network error scenarios and recovery</content>
-  <parameter name="filePath">/Users/pranay/Projects/EchoPanel/docs/flows/NET-010.md
+- Test gaps to add (note only, no implementation): Test various network error scenarios and recovery
+
