--- a/docs/flows/OBS-001.md
+++ b/docs/flows/OBS-001.md
@@ -118,5 +118,5 @@ List 5–10 realistic failures:
 
 - Questions that cannot be answered from current evidence: How are logs shipped to external systems?
 - Documentation gaps to fill: Log aggregation and monitoring setup
-- Test gaps to add (note only, no implementation): Test log redaction patterns work correctly</content>
-  <parameter name="filePath">/Users/pranay/Projects/EchoPanel/docs/flows/OBS-001.md
+- Test gaps to add (note only, no implementation): Test log redaction patterns work correctly
+
