--- a/docs/flows/OBS-002.md
+++ b/docs/flows/OBS-002.md
@@ -123,5 +123,5 @@ List 5–10 realistic failures:
 
 - Questions that cannot be answered from current evidence: How are metrics aggregated across sessions?
 - Documentation gaps to fill: Metrics export to external monitoring systems
-- Test gaps to add (note only, no implementation): Test metrics accuracy under load</content>
-  <parameter name="filePath">/Users/pranay/Projects/EchoPanel/docs/flows/OBS-002.md
+- Test gaps to add (note only, no implementation): Test metrics accuracy under load
+
