--- a/docs/flows/OBS-003.md
+++ b/docs/flows/OBS-003.md
@@ -119,5 +119,5 @@ List 5–10 realistic failures:
 
 - Questions that cannot be answered from current evidence: How are correlation IDs used for distributed tracing?
 - Documentation gaps to fill: Correlation ID lifecycle across reconnections
-- Test gaps to add (note only, no implementation): Test correlation ID propagation end-to-end</content>
-  <parameter name="filePath">/Users/pranay/Projects/EchoPanel/docs/flows/OBS-003.md
+- Test gaps to add (note only, no implementation): Test correlation ID propagation end-to-end
+
