--- a/docs/flows/OBS-004.md
+++ b/docs/flows/OBS-004.md
@@ -118,5 +118,5 @@ List 5–10 realistic failures:
 
 - Questions that cannot be answered from current evidence: What happens if health checks fail indefinitely?
 - Documentation gaps to fill: Health check failure thresholds and escalation
-- Test gaps to add (note only, no implementation): Test health check behavior during model loading</content>
-  <parameter name="filePath">/Users/pranay/Projects/EchoPanel/docs/flows/OBS-004.md
+- Test gaps to add (note only, no implementation): Test health check behavior during model loading
+
