--- a/docs/flows/OBS-005.md
+++ b/docs/flows/OBS-005.md
@@ -117,5 +117,5 @@ List 5–10 realistic failures:
 
 - Questions that cannot be answered from current evidence: What specific exit codes indicate different failure types?
 - Documentation gaps to fill: Backend crash classification and appropriate responses
-- Test gaps to add (note only, no implementation): Test crash recovery with various exit codes</content>
-  <parameter name="filePath">/Users/pranay/Projects/EchoPanel/docs/flows/OBS-005.md
+- Test gaps to add (note only, no implementation): Test crash recovery with various exit codes
+
