--- a/docs/flows/STO-001.md
+++ b/docs/flows/STO-001.md
@@ -101,5 +101,5 @@
 
 - Questions that cannot be answered from current evidence: Are there storage quotas or size limits?
 - Documentation gaps: Storage encryption, backup procedures
-- Test gaps to add (note only, no implementation): Test storage under disk full, permission denied</content>
-  <parameter name="filePath">/Users/pranay/Projects/EchoPanel/docs/flows/STO-001.md
+- Test gaps to add (note only, no implementation): Test storage under disk full, permission denied
+
