--- a/docs/flows/STO-002.md
+++ b/docs/flows/STO-002.md
@@ -87,5 +87,5 @@
 
 - Questions that cannot be answered from current evidence: Is there deduplication or ordering guarantees?
 - Documentation gaps: Transcript format versioning, corruption recovery
-- Test gaps to add (note only, no implementation): Test JSONL parsing, concurrent appends</content>
-  <parameter name="filePath">/Users/pranay/Projects/EchoPanel/docs/flows/STO-002.md
+- Test gaps to add (note only, no implementation): Test JSONL parsing, concurrent appends
+
