--- a/docs/flows/STO-003.md
+++ b/docs/flows/STO-003.md
@@ -87,5 +87,5 @@
 
 - Questions that cannot be answered from current evidence: What triggers the actual save from the notification?
 - Documentation gaps: Snapshot format versioning, merge conflicts on recovery
-- Test gaps to add (note only, no implementation): Test timer accuracy, snapshot integrity</content>
-  <parameter name="filePath">/Users/pranay/Projects/EchoPanel/docs/flows/STO-003.md
+- Test gaps to add (note only, no implementation): Test timer accuracy, snapshot integrity
+
