--- a/docs/flows/STO-004.md
+++ b/docs/flows/STO-004.md
@@ -87,5 +87,5 @@
 
 - Questions that cannot be answered from current evidence: How is the recovery UI triggered?
 - Documentation gaps: Recovery marker format, multiple recoverable sessions handling
-- Test gaps to add (note only, no implementation): Test marker persistence across app restarts</content>
-  <parameter name="filePath">/Users/pranay/Projects/EchoPanel/docs/flows/STO-004.md
+- Test gaps to add (note only, no implementation): Test marker persistence across app restarts
+
