--- a/docs/flows/STO-005.md
+++ b/docs/flows/STO-005.md
@@ -87,5 +87,5 @@
 
 - Questions that cannot be answered from current evidence: Is there vector storage or just lexical?
 - Documentation gaps: Store format versioning, backup procedures
-- Test gaps to add (note only, no implementation): Test chunking quality, scoring accuracy</content>
-  <parameter name="filePath">/Users/pranay/Projects/EchoPanel/docs/flows/STO-005.md
+- Test gaps to add (note only, no implementation): Test chunking quality, scoring accuracy
+
