--- a/docs/flows/STO-006.md
+++ b/docs/flows/STO-006.md
@@ -108,5 +108,5 @@ List 5–10 realistic failures:
 
 - Questions that cannot be answered from current evidence: Are keychain operations logged anywhere? Is there UI feedback for save failures?
 - Documentation gaps to fill: Keychain security model, accessibility attributes
-- Test gaps to add (note only, no implementation): Unit tests for KeychainHelper, integration tests for migration</content>
-  <parameter name="filePath">/Users/pranay/Projects/EchoPanel/docs/flows/STO-006.md
+- Test gaps to add (note only, no implementation): Unit tests for KeychainHelper, integration tests for migration
+
