--- a/docs/flows/STO-007.md
+++ b/docs/flows/STO-007.md
@@ -83,27 +83,27 @@ List 5–10 realistic failures:
 
 - Failure: User cancels save panel
   - Where detected: NSSavePanel response check
-  - Current handling (as evidenced): Returns early, no export
-  - User-visible outcome (if any): None, export cancelled
-  - Evidence: macapp/MeetingListenerApp/Sources/AppState.swift :: response == .OK
+  - Current handling (as evidenced): Returns early and records info notice
+  - User-visible outcome (if any): "Debug bundle export cancelled."
+  - Evidence: macapp/MeetingListenerApp/Sources/AppState.swift :: recordExportCancelled(format:)
 
 - Failure: Bundle generation fails
   - Where detected: SessionBundle.exportBundle()
   - Current handling (as evidenced): Throws error, caught in Task
-  - User-visible outcome (if any): Error logged, no UI feedback
-  - Evidence: macapp/MeetingListenerApp/Sources/AppState.swift :: catch { StructuredLogger.shared.error("Debug export failed", error: error) }
+  - User-visible outcome (if any): Error notice shown + structured error log
+  - Evidence: macapp/MeetingListenerApp/Sources/AppState.swift :: recordExportFailure(format:error:)
 
 - Failure: Zip process fails
   - Where detected: Process.waitUntilExit()
-  - Current handling (as evidenced): Throws, no explicit check
-  - User-visible outcome (if any): Export fails silently
-  - Evidence: macapp/MeetingListenerApp/Sources/SessionBundle.swift :: process.waitUntilExit()
+  - Current handling (as evidenced): Non-zero zip exit converted to explicit export error
+  - User-visible outcome (if any): Error notice shown + structured error log
+  - Evidence: macapp/MeetingListenerApp/Sources/SessionBundle.swift :: ExportError.zipFailed(exitCode:)
 
 - Failure: File copy fails (permissions, disk full)
   - Where detected: FileManager.copyItem()
   - Current handling (as evidenced): Throws error
-  - User-visible outcome (if any): Error logged
-  - Evidence: macapp/MeetingListenerApp/Sources/SessionBundle.swift :: try fm.copyItem(at: zipURL, to: destinationURL)
+  - User-visible outcome (if any): Error notice shown + structured error log
+  - Evidence: macapp/MeetingListenerApp/Sources/AppState.swift :: recordExportFailure(format:error:)
 
 ## Data and Storage
 
@@ -122,5 +122,4 @@ List 5–10 realistic failures:
 
 - Questions that cannot be answered from current evidence: Is there progress indication during export? What happens if bundle is very large?
 - Documentation gaps to fill: Bundle contents specification, privacy controls
-- Test gaps to add (note only, no implementation): Export with audio enabled, export cancellation, disk full scenarios</content>
-  <parameter name="filePath">/Users/pranay/Projects/EchoPanel/docs/flows/STO-007.md
+- Test gaps to add (note only, no implementation): Export with audio enabled, export cancellation, disk full scenarios
