--- a/docs/flows/STO-008.md
+++ b/docs/flows/STO-008.md
@@ -116,5 +116,5 @@ List 5–10 realistic failures:
 
 - Questions that cannot be answered from current evidence: Are logs included in session bundles? What happens on disk full?
 - Documentation gaps to fill: Log format specification, redaction patterns
-- Test gaps to add (note only, no implementation): File rotation, redaction effectiveness, concurrent logging</content>
-  <parameter name="filePath">/Users/pranay/Projects/EchoPanel/docs/flows/STO-008.md
+- Test gaps to add (note only, no implementation): File rotation, redaction effectiveness, concurrent logging
+
