--- a/docs/flows/STO-009.md
+++ b/docs/flows/STO-009.md
@@ -116,5 +116,5 @@ List 5–10 realistic failures:
 
 - Questions that cannot be answered from current evidence: Is there success feedback to user? Are exports logged for analytics?
 - Documentation gaps to fill: Export file format specifications
-- Test gaps to add (note only, no implementation): Export with empty data, export cancellation, file permission errors</content>
-  <parameter name="filePath">/Users/pranay/Projects/EchoPanel/docs/flows/STO-009.md
+- Test gaps to add (note only, no implementation): Export with empty data, export cancellation, file permission errors
+
