--- a/docs/flows/STO-010.md
+++ b/docs/flows/STO-010.md
@@ -124,5 +124,5 @@ List 5–10 realistic failures:
 
 - Questions that cannot be answered from current evidence: Are dump files included in session bundles? Is there size limiting?
 - Documentation gaps to fill: Privacy implications, file format details
-- Test gaps to add (note only, no implementation): Dump with multiple sources, directory permission errors, disk full during write</content>
-  <parameter name="filePath">/Users/pranay/Projects/EchoPanel/docs/flows/STO-010.md
+- Test gaps to add (note only, no implementation): Dump with multiple sources, directory permission errors, disk full during write
+
