--- a/docs/flows/UI-001.md
+++ b/docs/flows/UI-001.md
@@ -3,67 +3,65 @@
 ## Summary
 
 - Origin: Code-only
-- Status: Hypothesized
-- User interaction with macOS menu bar icon for quick access to app controls and status.
+- Status: Implemented
+- Menu bar entry is the primary launcher for session control, exports, diagnostics, and windows.
 - Boundaries crossed: UI / OS
-- Primary components (coarse list): MenuBarExtra, MeetingListenerApp
+- Primary components (coarse list): MeetingListenerApp, MenuBarExtra, AppState, BackendManager
 
 ## Triggers and Preconditions
 
-- Triggers (user action, event, schedule, startup, etc.): User clicks menu bar icon
-- Preconditions (permissions, settings flags, availability, model cached, etc.): App running
+- Triggers (user action, event, schedule, startup, etc.): user clicks menu bar item or uses configured menu shortcuts
+- Preconditions (permissions, settings flags, availability, model cached, etc.): app running
 
 ## Sequence (Happy Path)
 
-Use numbered sequence. Each step must include evidence.
-For each step:
-
-1. <what happens>
+1. App defines a `MenuBarExtra` scene with label and menu content.
    - Evidence:
-     - Code: path :: symbol/event/string
-     - Docs: path :: heading/snippet
-   - Notes: (only if needed)
-
-1. User clicks menu bar icon
+     - Code: `macapp/MeetingListenerApp/Sources/MeetingListenerApp.swift` :: `MenuBarExtra { menuContent } label: { labelContent }`
+2. Label reflects session state and timer.
    - Evidence:
-     - Code: macapp/MeetingListenerApp/Sources/MeetingListenerApp.swift :: MenuBarExtra
-   - Notes: Hypothesized - menu bar interaction
-
-1. Menu displays status and controls
+     - Code: `macapp/MeetingListenerApp/Sources/MeetingListenerApp.swift` :: `labelContent`
+3. Menu renders start/stop, export, diagnostics/history/summary, onboarding, and quit actions.
    - Evidence:
-     - Code: macapp/MeetingListenerApp/Sources/MeetingListenerApp.swift :: menuContent
-   - Notes: Hypothesized - menu content display
+     - Code: `macapp/MeetingListenerApp/Sources/MeetingListenerApp.swift` :: `menuContent`
+4. Start/stop action routes through `toggleSession()`.
+   - Evidence:
+     - Code: `macapp/MeetingListenerApp/Sources/MeetingListenerApp.swift` :: `toggleSession()`
 
 ## Inputs and Outputs
 
-- Inputs: User click
-- Outputs: Menu display
-- Side effects (writes, network calls, model loads, UI state changes): Menu UI shown
+- Inputs: menu click/shortcut commands
+- Outputs: session control actions, window opens, export calls
+- Side effects (writes, network calls, model loads, UI state changes): starts/stops sessions, opens windows, may stop backend on quit
 
 ## Failure Modes
 
-- Failure: Menu fails to display
-  - Where detected: MenuBarExtra
-  - Current handling (as evidenced): None evidenced
-  - User-visible outcome (if any): Menu not shown
-  - Evidence: Hypothesized
+- Failure: Backend not ready on start
+  - Where detected: `toggleSession` readiness check
+  - Current handling (as evidenced): side panel opens and backend error is surfaced to app state
+  - User-visible outcome (if any): actionable setup message
+  - Evidence: `macapp/MeetingListenerApp/Sources/MeetingListenerApp.swift` :: `reportBackendNotReady(...)`
+
+- Failure: Onboarding incomplete
+  - Where detected: onboarding completion check
+  - Current handling (as evidenced): opens onboarding window instead of starting session
+  - User-visible outcome (if any): onboarding window shown
+  - Evidence: `macapp/MeetingListenerApp/Sources/MeetingListenerApp.swift` :: `showOnboarding`
 
 ## Data and Storage
 
-- What data is produced/consumed: None
-- Where it is stored (DB/files/userData/etc.): None
-- Retention / deletion controls (if documented): None
+- What data is produced/consumed: onboarding completion flag, backend status, session state snapshot
+- Where it is stored (DB/files/userData/etc.): `UserDefaults` (onboarding), in-memory app state
+- Retention / deletion controls (if documented): standard settings retention
 
 ## Observability
 
-- Logs/events emitted: None
-- Correlation IDs / session IDs (if any): None
-- Metrics/traces (if any): None
-  Evidence: None evidenced
+- Logs/events emitted: backend stop on quit path; runtime notices via app state in panel
+- Correlation IDs / session IDs (if any): generated once session starts, not at menu click layer
+- Metrics/traces (if any): none dedicated to menu interactions
 
 ## Open Questions and Follow-up Tasks
 
-- Questions that cannot be answered from current evidence: What menu items are available? How does it integrate with app state?
-- Documentation gaps to fill: Menu bar interaction design
-- Test gaps to add (note only, no implementation): Menu bar click, menu item selection</content>
-  <parameter name="filePath">/Users/pranay/Projects/EchoPanel/docs/flows/UI-001.md
+- Questions that cannot be answered from current evidence: none
+- Documentation gaps to fill: none
+- Test gaps to add (note only, no implementation): shortcut coverage for all key menu actions
