--- a/docs/flows/UI-002.md
+++ b/docs/flows/UI-002.md
@@ -3,67 +3,68 @@
 ## Summary
 
 - Origin: Code-only
-- Status: Hypothesized
-- Display of floating side panel with transcript, controls, and insights.
-- Boundaries crossed: UI
-- Primary components (coarse list): SidePanelView, SidePanelController
+- Status: Implemented
+- Side panel window is created/shown from menu action and stays synchronized with app state.
+- Boundaries crossed: UI / OS windowing
+- Primary components (coarse list): SidePanelController, SidePanelView, MeetingListenerApp
 
 ## Triggers and Preconditions
 
-- Triggers (user action, event, schedule, startup, etc.): Menu bar action or hotkey
-- Preconditions (permissions, settings flags, availability, model cached, etc.): App running
+- Triggers (user action, event, schedule, startup, etc.): start-listening flow calls `sidePanelController.show(...)`
+- Preconditions (permissions, settings flags, availability, model cached, etc.): app process active
 
 ## Sequence (Happy Path)
 
-Use numbered sequence. Each step must include evidence.
-For each step:
-
-1. <what happens>
+1. `toggleSession()` calls `sidePanelController.show(...)` before session start checks.
    - Evidence:
-     - Code: path :: symbol/event/string
-     - Docs: path :: heading/snippet
-   - Notes: (only if needed)
-
-1. Trigger side panel display
+     - Code: `macapp/MeetingListenerApp/Sources/MeetingListenerApp.swift` :: `sidePanelController.show(appState:onEndSession:)`
+2. Controller lazily creates an `NSPanel` with hosted `SidePanelView`.
    - Evidence:
-     - Code: macapp/MeetingListenerApp/Sources/SidePanel/SidePanelView.swift
-   - Notes: Hypothesized - side panel view
-
-1. Panel shows transcript and controls
+     - Code: `macapp/MeetingListenerApp/Sources/SidePanelController.swift` :: `NSPanel(...)`, `NSHostingController(rootView:)`
+3. App/window activation is forced so panel comes forward from menu bar context.
    - Evidence:
-     - Docs: docs/UI.md :: Floating side panel
-   - Notes: Hypothesized - panel content
+     - Code: `macapp/MeetingListenerApp/Sources/SidePanelController.swift` :: `NSRunningApplication.current.activate(...)`, `orderFrontRegardless()`
+4. Mode changes resize panel via callback.
+   - Evidence:
+     - Code: `macapp/MeetingListenerApp/Sources/SidePanelController.swift` :: `onModeChange` -> `applyWindowLayout(...)`
+5. Window close delegates back to end-session handler.
+   - Evidence:
+     - Code: `macapp/MeetingListenerApp/Sources/SidePanelController.swift` :: `windowWillClose` -> `onEndSession?()`
 
 ## Inputs and Outputs
 
-- Inputs: Display trigger
-- Outputs: Panel UI
-- Side effects (writes, network calls, model loads, UI state changes): UI window shown
+- Inputs: show/hide requests, mode changes, window close
+- Outputs: visible floating panel with bound app state
+- Side effects (writes, network calls, model loads, UI state changes): may stop active session on window close
 
 ## Failure Modes
 
-- Failure: Panel fails to display
-  - Where detected: SidePanelController
-  - Current handling (as evidenced): None evidenced
-  - User-visible outcome (if any): Panel not shown
-  - Evidence: Hypothesized
+- Failure: Panel closed via titlebar while listening
+  - Where detected: NSWindow delegate callback
+  - Current handling (as evidenced): session stop callback invoked explicitly
+  - User-visible outcome (if any): session ends instead of running headless
+  - Evidence: `macapp/MeetingListenerApp/Sources/SidePanelController.swift` :: `windowWillClose`
+
+- Failure: Panel fails to frontmost from menu bar app context
+  - Where detected: window show path
+  - Current handling (as evidenced): explicit app activation + order-front calls
+  - User-visible outcome (if any): panel reliably focused
+  - Evidence: `macapp/MeetingListenerApp/Sources/SidePanelController.swift` :: activation block
 
 ## Data and Storage
 
-- What data is produced/consumed: None
-- Where it is stored (DB/files/userData/etc.): None
-- Retention / deletion controls (if documented): None
+- What data is produced/consumed: per-mode panel frame snapshots
+- Where it is stored (DB/files/userData/etc.): in-memory `savedFrameByMode`
+- Retention / deletion controls (if documented): reset when controller lifetime ends
 
 ## Observability
 
-- Logs/events emitted: None
-- Correlation IDs / session IDs (if any): None
-- Metrics/traces (if any): None
-  Evidence: None evidenced
+- Logs/events emitted: close-path `NSLog` in `windowWillClose`
+- Correlation IDs / session IDs (if any): not generated at window-controller layer
+- Metrics/traces (if any): none
 
 ## Open Questions and Follow-up Tasks
 
-- Questions that cannot be answered from current evidence: How is panel triggered? What modes does it have?
-- Documentation gaps to fill: Side panel interaction design
-- Test gaps to add (note only, no implementation): Panel display, mode switching</content>
-  <parameter name="filePath">/Users/pranay/Projects/EchoPanel/docs/flows/UI-002.md
+- Questions that cannot be answered from current evidence: none
+- Documentation gaps to fill: none
+- Test gaps to add (note only, no implementation): window mode-resize persistence across open/close cycles
