--- a/docs/flows/UI-003.md
+++ b/docs/flows/UI-003.md
@@ -3,67 +3,69 @@
 ## Summary
 
 - Origin: Code-only
-- Status: Hypothesized
-- Rendering of live transcript with timestamps, speakers, and formatting.
+- Status: Implemented
+- Transcript renders as interactive rows with speaker, confidence, entity highlights, focus, pin, and lens controls.
 - Boundaries crossed: UI
-- Primary components (coarse list): SidePanelView, AppState
+- Primary components (coarse list): AppState, SidePanelView, TranscriptLineRow, EntityHighlighter
 
 ## Triggers and Preconditions
 
-- Triggers (user action, event, schedule, startup, etc.): New transcript segments received
-- Preconditions (permissions, settings flags, availability, model cached, etc.): Session active
+- Triggers (user action, event, schedule, startup, etc.): transcript updates from ASR callbacks
+- Preconditions (permissions, settings flags, availability, model cached, etc.): side panel visible; transcript data may be empty/non-empty
 
 ## Sequence (Happy Path)
 
-Use numbered sequence. Each step must include evidence.
-For each step:
-
-1. <what happens>
+1. ASR callbacks update `transcriptSegments` and revision.
    - Evidence:
-     - Code: path :: symbol/event/string
-     - Docs: path :: heading/snippet
-   - Notes: (only if needed)
-
-1. Receive transcript update
+     - Code: `macapp/MeetingListenerApp/Sources/AppState.swift` :: `handlePartial(...)`, `handleFinal(...)`, `bumpTranscriptRevision()`
+2. Side panel observes transcript count/revision changes and refreshes filtered cache.
    - Evidence:
-     - Code: macapp/MeetingListenerApp/Sources/AppState.swift :: transcriptSegments
-   - Notes: Hypothesized - transcript data
-
-1. Render transcript in UI
+     - Code: `macapp/MeetingListenerApp/Sources/SidePanelView.swift` :: `.onChange(of: appState.transcriptSegments.count)`, `.onChange(of: appState.transcriptRevision)`
+3. View computes `visibleTranscriptSegments` with mode-specific windowing.
    - Evidence:
-     - Docs: docs/UI.md :: Transcript rendering rules
-   - Notes: Hypothesized - rendering logic
+     - Code: `macapp/MeetingListenerApp/Sources/SidePanel/Shared/SidePanelStateLogic.swift` :: `visibleTranscriptSegments`
+4. `transcriptScroller` renders rows and supports focus/lens/pin interactions.
+   - Evidence:
+     - Code: `macapp/MeetingListenerApp/Sources/SidePanel/Shared/SidePanelTranscriptSurfaces.swift` :: `transcriptScroller`, `transcriptRow`
+     - Code: `macapp/MeetingListenerApp/Sources/SidePanel/Shared/SidePanelSupportViews.swift` :: `TranscriptLineRow`
+5. Empty state is rendered when there are no visible segments.
+   - Evidence:
+     - Code: `macapp/MeetingListenerApp/Sources/SidePanel/Shared/SidePanelChromeViews.swift` :: `emptyTranscriptState`
 
 ## Inputs and Outputs
 
-- Inputs: Transcript segments
-- Outputs: UI display
-- Side effects (writes, network calls, model loads, UI state changes): UI updates
+- Inputs: transcript segments, entities, focus/pin/lens state
+- Outputs: rendered transcript rows and overlays
+- Side effects (writes, network calls, model loads, UI state changes): UI focus and overlay state transitions
 
 ## Failure Modes
 
-- Failure: Rendering fails
-  - Where detected: UI components
-  - Current handling (as evidenced): None evidenced
-  - User-visible outcome (if any): Display issues
-  - Evidence: Hypothesized
+- Failure: No transcript yet
+  - Where detected: transcript row rendering branch
+  - Current handling (as evidenced): explicit empty waiting state
+  - User-visible outcome (if any): guidance message instead of blank panel
+  - Evidence: `macapp/MeetingListenerApp/Sources/SidePanel/Shared/SidePanelTranscriptSurfaces.swift` + `.../SidePanelChromeViews.swift`
+
+- Failure: Stale focus/pin/lens IDs after transcript churn
+  - Where detected: transcript sanitization step
+  - Current handling (as evidenced): IDs are intersected/clamped/cleared by visibility and source IDs
+  - User-visible outcome (if any): consistent state without dangling selection
+  - Evidence: `macapp/MeetingListenerApp/Sources/SidePanel/Shared/SidePanelStateLogic.swift` :: `sanitizeStateForTranscript()`
 
 ## Data and Storage
 
-- What data is produced/consumed: Transcript segments
-- Where it is stored (DB/files/userData/etc.): AppState
-- Retention / deletion controls (if documented): Session-based
+- What data is produced/consumed: segment text/time/confidence/source + UI focus/pin/lens state
+- Where it is stored (DB/files/userData/etc.): in-memory app + view state
+- Retention / deletion controls (if documented): reset on session reset/view lifecycle
 
 ## Observability
 
-- Logs/events emitted: None
-- Correlation IDs / session IDs (if any): None
-- Metrics/traces (if any): None
-  Evidence: None evidenced
+- Logs/events emitted: none specific to row render path
+- Correlation IDs / session IDs (if any): indirect via upstream session data
+- Metrics/traces (if any): none specific to render FPS/latency
 
 ## Open Questions and Follow-up Tasks
 
-- Questions that cannot be answered from current evidence: How are speakers identified? What formatting rules?
-- Documentation gaps to fill: Transcript display logic
-- Test gaps to add (note only, no implementation): Rendering with speakers, timestamp display</content>
-  <parameter name="filePath">/Users/pranay/Projects/EchoPanel/docs/flows/UI-003.md
+- Questions that cannot be answered from current evidence: none
+- Documentation gaps to fill: none
+- Test gaps to add (note only, no implementation): snapshot/UI regression coverage for row states (focused/pinned/lens)
