--- a/docs/flows/UI-004.md
+++ b/docs/flows/UI-004.md
@@ -3,67 +3,68 @@
 ## Summary
 
 - Origin: Code-only
-- Status: Hypothesized
-- Search and navigation within transcript and insights.
+- Status: Implemented
+- Full-mode search and entity filtering narrow transcript results; keyboard + popover controls navigate mentions.
 - Boundaries crossed: UI
-- Primary components (coarse list): SidePanelView, AppState
+- Primary components (coarse list): SidePanelFullViews, SidePanelStateLogic, SidePanelTranscriptSurfaces
 
 ## Triggers and Preconditions
 
-- Triggers (user action, event, schedule, startup, etc.): User types in search field
-- Preconditions (permissions, settings flags, availability, model cached, etc.): Full mode active
+- Triggers (user action, event, schedule, startup, etc.): typing in full-mode search field, selecting entity filters, keyboard shortcuts
+- Preconditions (permissions, settings flags, availability, model cached, etc.): side panel in full mode for free-text search; transcript present for navigation usefulness
 
 ## Sequence (Happy Path)
 
-Use numbered sequence. Each step must include evidence.
-For each step:
-
-1. <what happens>
+1. User types in full search field.
    - Evidence:
-     - Code: path :: symbol/event/string
-     - Docs: path :: heading/snippet
-   - Notes: (only if needed)
-
-1. User enters search query
+     - Code: `macapp/MeetingListenerApp/Sources/SidePanel/Full/SidePanelFullViews.swift` :: `TextField(..., text: $fullSearchQuery)`
+2. Query changes trigger filtered-cache refresh.
    - Evidence:
-     - Docs: docs/UI.md :: Search field
-   - Notes: Hypothesized - search input
-
-1. Filter and highlight results
+     - Code: `macapp/MeetingListenerApp/Sources/SidePanelView.swift` :: `.onChange(of: fullSearchQuery)`
+3. Filtering logic applies normalized query to transcript text, speaker label, and timestamp.
    - Evidence:
-     - Code: macapp/MeetingListenerApp/Sources/EntityHighlighter.swift
-   - Notes: Hypothesized - filtering logic
+     - Code: `macapp/MeetingListenerApp/Sources/SidePanel/Shared/SidePanelStateLogic.swift` :: `normalizedFullSearchQuery`, `filterTranscriptSegments(...)`
+4. Entity popover and entity-surface actions can apply entity filter and navigate mentions.
+   - Evidence:
+     - Code: `macapp/MeetingListenerApp/Sources/SidePanel/Shared/SidePanelTranscriptSurfaces.swift` :: `EntityDetailPopover`, `entityFilter = ...`, `scrollToNextMention/scrollToPreviousMention`
+5. `Cmd+K`/`Ctrl+K` focuses search in full mode.
+   - Evidence:
+     - Code: `macapp/MeetingListenerApp/Sources/SidePanel/Shared/SidePanelStateLogic.swift` :: `handleKeyEvent` (`k` with cmd/control)
 
 ## Inputs and Outputs
 
-- Inputs: Search query
-- Outputs: Filtered results
-- Side effects (writes, network calls, model loads, UI state changes): UI highlighting
+- Inputs: search query, entity filter selections, mention-navigation commands
+- Outputs: filtered transcript list and updated focus target
+- Side effects (writes, network calls, model loads, UI state changes): focus movement, follow-live may be disabled on navigation
 
 ## Failure Modes
 
-- Failure: Search fails
-  - Where detected: Search components
-  - Current handling (as evidenced): None evidenced
-  - User-visible outcome (if any): No results
-  - Evidence: Hypothesized
+- Failure: Query entered outside full mode
+  - Where detected: normalization/filter guard
+  - Current handling (as evidenced): free-text query ignored when mode != `.full`
+  - User-visible outcome (if any): no broad text filtering in roll/compact
+  - Evidence: `macapp/MeetingListenerApp/Sources/SidePanel/Shared/SidePanelStateLogic.swift` :: `normalizedFullSearchQuery`
+
+- Failure: No entity mentions found for next/previous
+  - Where detected: mention navigation functions
+  - Current handling (as evidenced): wrap/retain behavior without crash
+  - User-visible outcome (if any): focus remains unchanged or wraps to first/last mention
+  - Evidence: `macapp/MeetingListenerApp/Sources/SidePanel/Shared/SidePanelStateLogic.swift` :: `scrollToNextMention`, `scrollToPreviousMention`
 
 ## Data and Storage
 
-- What data is produced/consumed: Search query, transcript data
-- Where it is stored (DB/files/userData/etc.): AppState
-- Retention / deletion controls (if documented): None
+- What data is produced/consumed: query text, entity filter id, filtered transcript cache
+- Where it is stored (DB/files/userData/etc.): in-memory `@State` cache on `SidePanelView`
+- Retention / deletion controls (if documented): recomputed on transcript/query/filter changes
 
 ## Observability
 
-- Logs/events emitted: None
-- Correlation IDs / session IDs (if any): None
-- Metrics/traces (if any): None
-  Evidence: None evidenced
+- Logs/events emitted: none specific to search interactions
+- Correlation IDs / session IDs (if any): none at search UI layer
+- Metrics/traces (if any): none
 
 ## Open Questions and Follow-up Tasks
 
-- Questions that cannot be answered from current evidence: What search algorithms? How are results highlighted?
-- Documentation gaps to fill: Search functionality design
-- Test gaps to add (note only, no implementation): Search queries, result highlighting</content>
-  <parameter name="filePath">/Users/pranay/Projects/EchoPanel/docs/flows/UI-004.md
+- Questions that cannot be answered from current evidence: none
+- Documentation gaps to fill: none
+- Test gaps to add (note only, no implementation): focused tests for full-mode query matching and entity mention navigation wrap behavior
