--- a/docs/flows/UI-005.md
+++ b/docs/flows/UI-005.md
@@ -3,67 +3,74 @@
 ## Summary
 
 - Origin: Code-only
-- Status: Hypothesized
-- User-initiated export actions for JSON, Markdown, and debug bundles.
+- Status: Implemented
+- UI exposes copy/export actions and surfaces success/cancel/failure outcomes as user notices.
 - Boundaries crossed: UI / Storage
-- Primary components (coarse list): SidePanelView, AppState
+- Primary components (coarse list): SidePanelTranscriptSurfaces, MeetingListenerApp, AppState
 
 ## Triggers and Preconditions
 
-- Triggers (user action, event, schedule, startup, etc.): User clicks export buttons
-- Preconditions (permissions, settings flags, availability, model cached, etc.): Session data available
+- Triggers (user action, event, schedule, startup, etc.): user clicks copy/export buttons from side panel or menu commands
+- Preconditions (permissions, settings flags, availability, model cached, etc.): export buttons disabled when no transcript/action/decision/risk data
 
 ## Sequence (Happy Path)
 
-Use numbered sequence. Each step must include evidence.
-For each step:
-
-1. <what happens>
+1. Side panel footer renders `Copy Markdown`, `Export JSON`, `Export Markdown` actions.
    - Evidence:
-     - Code: path :: symbol/event/string
-     - Docs: path :: heading/snippet
-   - Notes: (only if needed)
-
-1. User clicks export button
+     - Code: `macapp/MeetingListenerApp/Sources/SidePanel/Shared/SidePanelTranscriptSurfaces.swift` :: `footerControls(...)`
+2. Menu bar commands expose equivalent export actions.
    - Evidence:
-     - Code: macapp/MeetingListenerApp/Sources/SidePanelTranscriptSurfaces.swift :: Button("Export JSON")
-   - Notes: Hypothesized - export buttons
-
-1. Trigger export flow
+     - Code: `macapp/MeetingListenerApp/Sources/MeetingListenerApp.swift` :: command menu + menu content export buttons
+3. Export actions call `AppState` export methods with `NSSavePanel`.
    - Evidence:
-     - Code: macapp/MeetingListenerApp/Sources/AppState.swift :: exportJSON()
-   - Notes: Hypothesized - export methods
+     - Code: `macapp/MeetingListenerApp/Sources/AppState.swift` :: `exportJSON()`, `exportMarkdown()`, `exportDebugBundle()`
+4. Export result routes to user notice (`success`/`info`/`error`) and error logging.
+   - Evidence:
+     - Code: `macapp/MeetingListenerApp/Sources/AppState.swift` :: `recordExportSuccess`, `recordExportCancelled`, `recordExportFailure`
+5. Side panel shows notice banner and supports dismiss.
+   - Evidence:
+     - Code: `macapp/MeetingListenerApp/Sources/SidePanel/Shared/SidePanelChromeViews.swift` :: `userNoticeBanner(_:)`
 
 ## Inputs and Outputs
 
-- Inputs: Export type selection
-- Outputs: File save dialogs
-- Side effects (writes, network calls, model loads, UI state changes): File writes
+- Inputs: export action type + destination path selection
+- Outputs: JSON/Markdown/ZIP output file or explicit cancel/failure notice
+- Side effects (writes, network calls, model loads, UI state changes): filesystem writes via save panel, notice state updates
 
 ## Failure Modes
 
-- Failure: Export fails
-  - Where detected: Export methods
-  - Current handling (as evidenced): None evidenced
-  - User-visible outcome (if any): Error messages
-  - Evidence: Hypothesized
+- Failure: User cancels save panel
+  - Where detected: save panel response guard
+  - Current handling (as evidenced): explicit cancellation notice
+  - User-visible outcome (if any): non-error info banner
+  - Evidence: `macapp/MeetingListenerApp/Sources/AppState.swift` :: `recordExportCancelled(...)`
+
+- Failure: File write/export exception
+  - Where detected: export `do/catch`
+  - Current handling (as evidenced): persistent error notice + structured error log
+  - User-visible outcome (if any): visible failure message
+  - Evidence: `macapp/MeetingListenerApp/Sources/AppState.swift` :: `recordExportFailure(...)`
+
+- Failure: No exportable data
+  - Where detected: `exportDisabled` state
+  - Current handling (as evidenced): export controls disabled
+  - User-visible outcome (if any): cannot trigger empty export from panel/menu disabled paths
+  - Evidence: `macapp/MeetingListenerApp/Sources/SidePanel/Shared/SidePanelStateLogic.swift` :: `exportDisabled`
 
 ## Data and Storage
 
-- What data is produced/consumed: Session data
-- Where it is stored (DB/files/userData/etc.): User-selected files
-- Retention / deletion controls (if documented): User-managed
+- What data is produced/consumed: live/final summary markdown, session payload JSON, optional debug bundle
+- Where it is stored (DB/files/userData/etc.): user-selected file destination
+- Retention / deletion controls (if documented): user-controlled filesystem retention
 
 ## Observability
 
-- Logs/events emitted: None
-- Correlation IDs / session IDs (if any): None
-- Metrics/traces (if any): None
-  Evidence: None evidenced
+- Logs/events emitted: structured export-failure logs; debug-bundle export info logs
+- Correlation IDs / session IDs (if any): session id included where available (debug bundle path)
+- Metrics/traces (if any): none
 
 ## Open Questions and Follow-up Tasks
 
-- Questions that cannot be answered from current evidence: What export formats? How are errors handled?
-- Documentation gaps to fill: Export UI design
-- Test gaps to add (note only, no implementation): Export button clicks, error handling</content>
-  <parameter name="filePath">/Users/pranay/Projects/EchoPanel/docs/flows/UI-005.md
+- Questions that cannot be answered from current evidence: none
+- Documentation gaps to fill: none
+- Test gaps to add (note only, no implementation): export cancel/failure UI notice assertions in Swift tests
