--- a/docs/flows/UI-006.md
+++ b/docs/flows/UI-006.md
@@ -3,96 +3,71 @@
 ## Summary
 
 - Origin: Code-only
-- Status: Hypothesized
-- User cycles through insight surfaces (Summary, Actions, Pins, Entities, Raw) in the side panel overlay using left/right arrow keys.
+- Status: Implemented
+- Left/right controls cycle insight surfaces in roll/compact and insight tabs in full mode.
 - Boundaries crossed: UI
-- Primary components (coarse list): SidePanelView, SidePanelStateLogic
+- Primary components (coarse list): SidePanelView, SidePanelStateLogic, SidePanelTranscriptSurfaces
 
 ## Triggers and Preconditions
 
-- Triggers (user action, event, schedule, startup, etc.): User presses left or right arrow key while side panel is focused
-- Preconditions (permissions, settings flags, availability, model cached, etc.): Side panel is open, not in Full mode (or in Full mode but surface overlay is shown)
+- Triggers (user action, event, schedule, startup, etc.): arrow keys, surface menu/button taps
+- Preconditions (permissions, settings flags, availability, model cached, etc.): side panel focused
 
 ## Sequence (Happy Path)
 
-Use numbered sequence. Each step must include evidence.
-For each step:
-
-1. <what happens>
+1. Left/right keyboard events are captured.
    - Evidence:
-     - Code: path :: symbol/event/string
-     - Docs: path :: heading/snippet
-   - Notes: (only if needed)
-
-1. User presses left or right arrow key
+     - Code: `macapp/MeetingListenerApp/Sources/SidePanel/Shared/SidePanelStateLogic.swift` :: `handleKeyEvent` keycodes `123/124`
+     - Code: `macapp/MeetingListenerApp/Sources/SidePanelView.swift` :: `.onMoveCommand` left/right
+2. `handleHorizontalSurface(delta:)` dispatches by mode/overlay state.
    - Evidence:
-     - Code: macapp/MeetingListenerApp/Sources/SidePanel/Shared/SidePanelStateLogic.swift :: handleKeyEvent (case 124: right, case 123: left)
-   - Notes: Key codes 124 for right, 123 for left
-
-1. handleHorizontalSurface called with delta (+1 for right, -1 for left)
+     - Code: `macapp/MeetingListenerApp/Sources/SidePanel/Shared/SidePanelStateLogic.swift` :: `handleHorizontalSurface`
+3. In roll/compact, first left/right opens overlay at `summary`; subsequent presses call `cycleSurface`.
    - Evidence:
-     - Code: macapp/MeetingListenerApp/Sources/SidePanel/Shared/SidePanelStateLogic.swift :: handleHorizontalSurface(delta: Int)
-   - Notes: Called from onMoveCommand in SidePanelView
-
-1. If in Full mode, cycleFullInsightTab; else if surface overlay shown, cycleSurface; else show surface overlay with summary
+     - Code: `macapp/MeetingListenerApp/Sources/SidePanel/Shared/SidePanelStateLogic.swift` :: `showSurfaceOverlay = true`, `activeSurface = .summary`, `cycleSurface`
+4. In full mode, left/right cycles `fullInsightTab`.
    - Evidence:
-     - Code: macapp/MeetingListenerApp/Sources/SidePanel/Shared/SidePanelStateLogic.swift :: handleHorizontalSurface
-   - Notes: Logic branches based on viewMode and showSurfaceOverlay
-
-1. cycleSurface updates activeSurface to next/previous in enum
+     - Code: `macapp/MeetingListenerApp/Sources/SidePanel/Shared/SidePanelStateLogic.swift` :: `cycleFullInsightTab`
+5. UI controls also set/toggle surfaces.
    - Evidence:
-     - Code: macapp/MeetingListenerApp/Sources/SidePanel/Shared/SidePanelStateLogic.swift :: cycleSurface(\_ delta: Int)
-     - Code: macapp/MeetingListenerApp/Sources/SidePanelView.swift :: enum Surface { summary, actions, pins, entities, raw }
-   - Notes: Cycles through Surface.allCases
-
-1. UI updates to show the new active surface content
-   - Evidence:
-     - Code: macapp/MeetingListenerApp/Sources/SidePanel/Shared/SidePanelStateLogic.swift :: activeSurface @Published
-   - Notes: Hypothesized - SwiftUI reactive update
+     - Code: `macapp/MeetingListenerApp/Sources/SidePanel/Roll/SidePanelRollViews.swift` :: `Button("Surfaces")`
+     - Code: `macapp/MeetingListenerApp/Sources/SidePanel/Compact/SidePanelCompactViews.swift` :: `Button("Surfaces")`
+     - Code: `macapp/MeetingListenerApp/Sources/SidePanel/Shared/SidePanelTranscriptSurfaces.swift` :: `Menu("Surface")`
 
 ## Inputs and Outputs
 
-- Inputs: Left/right arrow key press
-- Outputs: Surface overlay displays different content (Summary/Actions/Pins/Entities/Raw)
-- Side effects (writes, network calls, model loads, UI state changes): UI state change for activeSurface, possible surface overlay shown if not already
+- Inputs: left/right commands, surface button/menu actions
+- Outputs: active surface/tab transitions and overlay visibility changes
+- Side effects (writes, network calls, model loads, UI state changes): updates to `activeSurface`, `fullInsightTab`, `showSurfaceOverlay`
 
 ## Failure Modes
 
-List 5–10 realistic failures:
+- Failure: Invalid index math while cycling
+  - Where detected: cycling helpers
+  - Current handling (as evidenced): modular arithmetic wraps cleanly
+  - User-visible outcome (if any): cyclic behavior, no out-of-range crash
+  - Evidence: `macapp/MeetingListenerApp/Sources/SidePanel/Shared/SidePanelStateLogic.swift` :: modulo index calculations
 
-- Failure: Key press not handled
-  - Where detected: handleKeyEvent
-  - Current handling (as evidenced): Return false, event not consumed
-  - User-visible outcome (if any): No UI change
-  - Evidence: Code: macapp/MeetingListenerApp/Sources/SidePanel/Shared/SidePanelStateLogic.swift :: handleKeyEvent return false
-
-- Failure: Surface enum index out of bounds
-  - Where detected: cycleSurface
-  - Current handling (as evidenced): Modular arithmetic with count
-  - User-visible outcome (if any): Wraps around to first/last
-  - Evidence: Code: macapp/MeetingListenerApp/Sources/SidePanel/Shared/SidePanelStateLogic.swift :: (idx + delta + Surface.allCases.count) % Surface.allCases.count
-
-- Failure: Surface overlay fails to show
-  - Where detected: SwiftUI rendering
-  - Current handling (as evidenced): None evidenced
-  - User-visible outcome (if any): Overlay not visible
-  - Evidence: Hypothesized
+- Failure: Overlay left open unintentionally
+  - Where detected: escape/close flow
+  - Current handling (as evidenced): `Esc`/close button closes top layer
+  - User-visible outcome (if any): recoverable via keyboard or close button
+  - Evidence: `macapp/MeetingListenerApp/Sources/SidePanel/Shared/SidePanelStateLogic.swift` :: `closeTopLayer`; `SidePanelTranscriptSurfaces.swift` close button
 
 ## Data and Storage
 
-- What data is produced/consumed: activeSurface enum value
-- Where it is stored (DB/files/userData/etc.): In-memory @State/@Published in SidePanelView
-- Retention / deletion controls (if documented): None, resets on view recreation
+- What data is produced/consumed: `activeSurface`, `fullInsightTab`, `showSurfaceOverlay`
+- Where it is stored (DB/files/userData/etc.): in-memory view state
+- Retention / deletion controls (if documented): reset on view lifecycle
 
 ## Observability
 
-- Logs/events emitted: None evidenced
-- Correlation IDs / session IDs (if any): None
-- Metrics/traces (if any): None evidenced
+- Logs/events emitted: none
+- Correlation IDs / session IDs (if any): none
+- Metrics/traces (if any): none
 
 ## Open Questions and Follow-up Tasks
 
-- Questions that cannot be answered from current evidence: How does the surface overlay UI actually render the different surfaces?
-- Documentation gaps to fill: UI rendering logic for surface overlay
-- Test gaps to add (note only, no implementation): Test keyboard navigation cycles through all surfaces</content>
-  <parameter name="filePath">/Users/pranay/Projects/EchoPanel/docs/flows/UI-006.md
+- Questions that cannot be answered from current evidence: none
+- Documentation gaps to fill: none
+- Test gaps to add (note only, no implementation): keyboard left/right integration coverage per view mode
