--- a/docs/flows/UI-007.md
+++ b/docs/flows/UI-007.md
@@ -3,91 +3,69 @@
 ## Summary
 
 - Origin: Code-only
-- Status: Hypothesized
-- User navigates focus through transcript segments using up/down arrow keys.
+- Status: Implemented
+- Up/down navigation moves focused transcript line and syncs scroll/timeline state.
 - Boundaries crossed: UI
-- Primary components (coarse list): SidePanelView, SidePanelStateLogic
+- Primary components (coarse list): SidePanelView, SidePanelStateLogic, SidePanelTranscriptSurfaces
 
 ## Triggers and Preconditions
 
-- Triggers (user action, event, schedule, startup, etc.): User presses up or down arrow key while side panel is focused
-- Preconditions (permissions, settings flags, availability, model cached, etc.): Side panel is open, transcript has segments
+- Triggers (user action, event, schedule, startup, etc.): up/down keys via keyboard monitor or move-command handler
+- Preconditions (permissions, settings flags, availability, model cached, etc.): side panel focused; at least one visible transcript segment
 
 ## Sequence (Happy Path)
 
-Use numbered sequence. Each step must include evidence.
-For each step:
-
-1. <what happens>
+1. Up/down key events are captured.
    - Evidence:
-     - Code: path :: symbol/event/string
-     - Docs: path :: heading/snippet
-   - Notes: (only if needed)
-
-1. User presses up or down arrow key
+     - Code: `macapp/MeetingListenerApp/Sources/SidePanel/Shared/SidePanelStateLogic.swift` :: `handleKeyEvent` keycodes `126/125`
+     - Code: `macapp/MeetingListenerApp/Sources/SidePanelView.swift` :: `.onMoveCommand` up/down
+2. `moveFocus(by:)` calculates next index (clamped).
    - Evidence:
-     - Code: macapp/MeetingListenerApp/Sources/SidePanel/Shared/SidePanelStateLogic.swift :: handleKeyEvent (case 126: up, case 125: down)
-   - Notes: Key codes 126 for up, 125 for down
-
-1. moveFocus called with delta (+1 for down, -1 for up)
+     - Code: `macapp/MeetingListenerApp/Sources/SidePanel/Shared/SidePanelStateLogic.swift` :: `moveFocus(by:)`
+3. Focus change disables follow-live and sets pending scroll target.
    - Evidence:
-     - Code: macapp/MeetingListenerApp/Sources/SidePanel/Shared/SidePanelStateLogic.swift :: moveFocus(by: Int)
-     - Code: macapp/MeetingListenerApp/Sources/SidePanelView.swift :: onMoveCommand case .up/.down
-   - Notes: Called from onMoveCommand in SidePanelView
-
-1. moveFocus updates focusedSegmentID to next/previous visible segment
+     - Code: `macapp/MeetingListenerApp/Sources/SidePanel/Shared/SidePanelStateLogic.swift` :: `followLive = false`, `pendingScrollTarget = focusedSegmentID`
+4. Scroll view reader centers focused segment.
    - Evidence:
-     - Code: macapp/MeetingListenerApp/Sources/SidePanel/Shared/SidePanelStateLogic.swift :: moveFocus(by: Int)
-   - Notes: Uses visibleTranscriptSegments array
-
-1. UI updates focus highlight on the new segment
+     - Code: `macapp/MeetingListenerApp/Sources/SidePanel/Shared/SidePanelTranscriptSurfaces.swift` :: `.onChange(of: pendingScrollTarget)` -> `proxy.scrollTo(..., anchor: .center)`
+5. Timeline readout syncs to new focus.
    - Evidence:
-     - Code: macapp/MeetingListenerApp/Sources/SidePanel/Shared/SidePanelStateLogic.swift :: focusedSegmentID @Published
-   - Notes: Hypothesized - SwiftUI reactive update
+     - Code: `macapp/MeetingListenerApp/Sources/SidePanel/Shared/SidePanelStateLogic.swift` :: `.onChange(of: focusedSegmentID)` -> `syncTimelineToFocus()`
 
 ## Inputs and Outputs
 
-- Inputs: Up/down arrow key press
-- Outputs: Focus moves to different transcript segment, visual highlight changes
-- Side effects (writes, network calls, model loads, UI state changes): UI state change for focusedSegmentID
+- Inputs: up/down navigation intent
+- Outputs: focused line change + centered scroll target
+- Side effects (writes, network calls, model loads, UI state changes): follow-live is turned off on manual navigation
 
 ## Failure Modes
 
-List 5–10 realistic failures:
+- Failure: No visible transcript segments
+  - Where detected: guard in `moveFocus`
+  - Current handling (as evidenced): no-op
+  - User-visible outcome (if any): no focus movement
+  - Evidence: `macapp/MeetingListenerApp/Sources/SidePanel/Shared/SidePanelStateLogic.swift` :: `guard !visibleTranscriptSegments.isEmpty else { return }`
 
-- Failure: No segments to focus
-  - Where detected: moveFocus
-  - Current handling (as evidenced): Guard visibleTranscriptSegments.isEmpty
-  - User-visible outcome (if any): No focus change
-  - Evidence: Code: macapp/MeetingListenerApp/Sources/SidePanel/Shared/SidePanelStateLogic.swift :: guard !visibleTranscriptSegments.isEmpty
-
-- Failure: Index out of bounds
-  - Where detected: moveFocus
-  - Current handling (as evidenced): Clamp to 0...count-1
-  - User-visible outcome (if any): Focus stays at first/last
-  - Evidence: Code: macapp/MeetingListenerApp/Sources/SidePanel/Shared/SidePanelStateLogic.swift :: max(0, min(currentIndex + delta, segments.count - 1))
-
-- Failure: Focus highlight fails to update
-  - Where detected: SwiftUI rendering
-  - Current handling (as evidenced): None evidenced
-  - User-visible outcome (if any): Visual focus not shown
-  - Evidence: Hypothesized
+- Failure: Surface overlay open in non-full mode
+  - Where detected: early return in `moveFocus`
+  - Current handling (as evidenced): focus movement intentionally suppressed while overlay active
+  - User-visible outcome (if any): arrows operate overlay context
+  - Evidence: `macapp/MeetingListenerApp/Sources/SidePanel/Shared/SidePanelStateLogic.swift` :: `if showSurfaceOverlay && viewMode != .full { return }`
 
 ## Data and Storage
 
-- What data is produced/consumed: focusedSegmentID UUID
-- Where it is stored (DB/files/userData/etc.): In-memory @State/@Published in SidePanelView
-- Retention / deletion controls (if documented): None, resets on view recreation
+- What data is produced/consumed: `focusedSegmentID`, `pendingScrollTarget`, `timelinePosition`
+- Where it is stored (DB/files/userData/etc.): in-memory view state
+- Retention / deletion controls (if documented): sanitized against transcript changes
 
 ## Observability
 
-- Logs/events emitted: None evidenced
-- Correlation IDs / session IDs (if any): None
-- Metrics/traces (if any): None evidenced
+- Logs/events emitted: none
+- Correlation IDs / session IDs (if any): none
+- Metrics/traces (if any): none
 
 ## Open Questions and Follow-up Tasks
 
-- Questions that cannot be answered from current evidence: How is the focus visually indicated in the UI?
-- Documentation gaps to fill: Focus highlighting implementation
-- Test gaps to add (note only, no implementation): Test focus navigation with various segment counts</content>
-  <parameter name="filePath">/Users/pranay/Projects/EchoPanel/docs/flows/UI-007.md
+- Questions that cannot be answered from current evidence: none
+- Documentation gaps to fill: none
+- Test gaps to add (note only, no implementation): focus navigation coverage with overlay-open guard
