--- a/docs/flows/UI-008.md
+++ b/docs/flows/UI-008.md
@@ -3,84 +3,66 @@
 ## Summary
 
 - Origin: Code-only
-- Status: Hypothesized
-- User toggles lens view on the currently focused transcript segment using Enter key.
+- Status: Implemented
+- Enter/double-click toggles a focus lens for the selected transcript segment.
 - Boundaries crossed: UI
-- Primary components (coarse list): SidePanelView, SidePanelStateLogic
+- Primary components (coarse list): SidePanelStateLogic, SidePanelTranscriptSurfaces, SidePanelChromeViews
 
 ## Triggers and Preconditions
 
-- Triggers (user action, event, schedule, startup, etc.): User presses Enter key while side panel is focused
-- Preconditions (permissions, settings flags, availability, model cached, etc.): Side panel is open, a segment is focused (focusedSegmentID != nil)
+- Triggers (user action, event, schedule, startup, etc.): Enter key on focused line or double-click transcript row
+- Preconditions (permissions, settings flags, availability, model cached, etc.): focused segment exists for keyboard path
 
 ## Sequence (Happy Path)
 
-Use numbered sequence. Each step must include evidence.
-For each step:
-
-1. <what happens>
+1. User toggles lens via Enter key or row double-click.
    - Evidence:
-     - Code: path :: symbol/event/string
-     - Docs: path :: heading/snippet
-   - Notes: (only if needed)
-
-1. User presses Enter key
+     - Code: `macapp/MeetingListenerApp/Sources/SidePanel/Shared/SidePanelStateLogic.swift` :: `handleKeyEvent` case `36` -> `toggleLens(id)`
+     - Code: `macapp/MeetingListenerApp/Sources/SidePanel/Shared/SidePanelTranscriptSurfaces.swift` :: `.onTapGesture(count: 2)` -> `toggleLens(segment.id)`
+2. `toggleLens` sets/clears `lensSegmentID` and disables follow-live.
    - Evidence:
-     - Code: macapp/MeetingListenerApp/Sources/SidePanel/Shared/SidePanelStateLogic.swift :: handleKeyEvent (case 36: return)
-   - Notes: Key code 36 for return/enter
-
-1. toggleLens called with focusedSegmentID
+     - Code: `macapp/MeetingListenerApp/Sources/SidePanel/Shared/SidePanelStateLogic.swift` :: `toggleLens(_:)`
+3. Lens card is rendered under active transcript row when ids match.
    - Evidence:
-     - Code: macapp/MeetingListenerApp/Sources/SidePanel/Shared/SidePanelStateLogic.swift :: toggleLens(\_ id: UUID)
-   - Notes: Only if focusedSegmentID exists
-
-1. toggleLens sets lensSegmentID to the id if nil, or clears it if already set
+     - Code: `macapp/MeetingListenerApp/Sources/SidePanel/Shared/SidePanelTranscriptSurfaces.swift` :: `if lensSegmentID == segment.id { focusLens(...) }`
+4. Lens card provides quick surface switching actions.
    - Evidence:
-     - Code: macapp/MeetingListenerApp/Sources/SidePanel/Shared/SidePanelStateLogic.swift :: toggleLens
-   - Notes: lensSegmentID = lensSegmentID == id ? nil : id
-
-1. UI shows/hides lens overlay for the segment
-   - Evidence:
-     - Code: macapp/MeetingListenerApp/Sources/SidePanel/Shared/SidePanelStateLogic.swift :: lensSegmentID @Published
-   - Notes: Hypothesized - SwiftUI conditional rendering
+     - Code: `macapp/MeetingListenerApp/Sources/SidePanel/Shared/SidePanelChromeViews.swift` :: `focusLens(segment:)`
 
 ## Inputs and Outputs
 
-- Inputs: Enter key press
-- Outputs: Lens overlay appears/disappears on focused segment
-- Side effects (writes, network calls, model loads, UI state changes): UI state change for lensSegmentID
+- Inputs: focused segment id + lens toggle intent
+- Outputs: lens open/close state and optional surface changes
+- Side effects (writes, network calls, model loads, UI state changes): `followLive` may be disabled for stable inspection
 
 ## Failure Modes
 
-List 5–10 realistic failures:
+- Failure: Enter pressed without focused segment
+  - Where detected: optional id guard in key handler
+  - Current handling (as evidenced): no-op
+  - User-visible outcome (if any): no lens change
+  - Evidence: `macapp/MeetingListenerApp/Sources/SidePanel/Shared/SidePanelStateLogic.swift` :: `if let id = focusedSegmentID { toggleLens(id) }`
 
-- Failure: No focused segment
-  - Where detected: handleKeyEvent
-  - Current handling (as evidenced): Guard let id = focusedSegmentID
-  - User-visible outcome (if any): No action
-  - Evidence: Code: macapp/MeetingListenerApp/Sources/SidePanel/Shared/SidePanelStateLogic.swift :: if let id = focusedSegmentID
-
-- Failure: Lens overlay fails to render
-  - Where detected: SwiftUI rendering
-  - Current handling (as evidenced): None evidenced
-  - User-visible outcome (if any): Lens not shown/hidden
-  - Evidence: Hypothesized
+- Failure: Lens target removed from transcript
+  - Where detected: transcript state sanitization
+  - Current handling (as evidenced): stale `lensSegmentID` cleared
+  - User-visible outcome (if any): lens closes automatically
+  - Evidence: `macapp/MeetingListenerApp/Sources/SidePanel/Shared/SidePanelStateLogic.swift` :: `sanitizeStateForTranscript()`
 
 ## Data and Storage
 
-- What data is produced/consumed: lensSegmentID UUID (optional)
-- Where it is stored (DB/files/userData/etc.): In-memory @State/@Published in SidePanelView
-- Retention / deletion controls (if documented): None, resets on view recreation
+- What data is produced/consumed: `lensSegmentID`
+- Where it is stored (DB/files/userData/etc.): in-memory view state
+- Retention / deletion controls (if documented): cleared when invalidated or jump-to-live path resets
 
 ## Observability
 
-- Logs/events emitted: None evidenced
-- Correlation IDs / session IDs (if any): None
-- Metrics/traces (if any): None evidenced
+- Logs/events emitted: none
+- Correlation IDs / session IDs (if any): none
+- Metrics/traces (if any): none
 
 ## Open Questions and Follow-up Tasks
 
-- Questions that cannot be answered from current evidence: What does the lens overlay show?
-- Documentation gaps to fill: Lens UI implementation and content
-- Test gaps to add (note only, no implementation): Test lens toggle opens/closes correctly</content>
-  <parameter name="filePath">/Users/pranay/Projects/EchoPanel/docs/flows/UI-008.md
+- Questions that cannot be answered from current evidence: none
+- Documentation gaps to fill: none
+- Test gaps to add (note only, no implementation): Enter + double-click parity tests
