--- a/docs/flows/UI-009.md
+++ b/docs/flows/UI-009.md
@@ -3,90 +3,67 @@
 ## Summary
 
 - Origin: Code-only
-- Status: Hypothesized
-- User toggles pin status on the currently focused transcript segment using P key.
+- Status: Implemented
+- Pinning lets users mark important transcript lines and revisit them from the Pins surface.
 - Boundaries crossed: UI
-- Primary components (coarse list): SidePanelView, SidePanelStateLogic
+- Primary components (coarse list): SidePanelStateLogic, SidePanelTranscriptSurfaces
 
 ## Triggers and Preconditions
 
-- Triggers (user action, event, schedule, startup, etc.): User presses P key while side panel is focused
-- Preconditions (permissions, settings flags, availability, model cached, etc.): Side panel is open, a segment is focused (focusedSegmentID != nil)
+- Triggers (user action, event, schedule, startup, etc.): `P` key or pin button on focused row
+- Preconditions (permissions, settings flags, availability, model cached, etc.): transcript contains target segment
 
 ## Sequence (Happy Path)
 
-Use numbered sequence. Each step must include evidence.
-For each step:
-
-1. <what happens>
+1. User pins/unpins current line (`P`) or row action button.
    - Evidence:
-     - Code: path :: symbol/event/string
-     - Docs: path :: heading/snippet
-   - Notes: (only if needed)
-
-1. User presses P key
+     - Code: `macapp/MeetingListenerApp/Sources/SidePanel/Shared/SidePanelStateLogic.swift` :: `handleKeyEvent` chars `"p"` -> `togglePin(id)`
+     - Code: `macapp/MeetingListenerApp/Sources/SidePanel/Shared/SidePanelTranscriptSurfaces.swift` :: `onPin` callback -> `togglePin(segment.id)`
+2. `togglePin` inserts/removes id from `pinnedSegmentIDs` set.
    - Evidence:
-     - Code: macapp/MeetingListenerApp/Sources/SidePanel/Shared/SidePanelStateLogic.swift :: handleKeyEvent (charsIgnoring == "p")
-   - Notes: Case-insensitive character check
-
-1. togglePin called with focusedSegmentID
+     - Code: `macapp/MeetingListenerApp/Sources/SidePanel/Shared/SidePanelStateLogic.swift` :: `togglePin(_:)`
+3. Pins surface reads resolved pinned segments and allows jump-to-segment behavior.
    - Evidence:
-     - Code: macapp/MeetingListenerApp/Sources/SidePanel/Shared/SidePanelStateLogic.swift :: togglePin(\_ id: UUID)
-   - Notes: Only if focusedSegmentID exists
-
-1. togglePin finds the segment and toggles its pinned status
+     - Code: `macapp/MeetingListenerApp/Sources/SidePanel/Shared/SidePanelStateLogic.swift` :: `pinnedSegments`
+     - Code: `macapp/MeetingListenerApp/Sources/SidePanel/Shared/SidePanelTranscriptSurfaces.swift` :: `surfaceContent(.pins)`
+4. Transcript sanitization removes pin ids for segments no longer present.
    - Evidence:
-     - Code: macapp/MeetingListenerApp/Sources/SidePanel/Shared/SidePanelStateLogic.swift :: togglePin
-   - Notes: Updates appState.pinnedSegmentIDs set
-
-1. UI updates pin indicator on the segment
-   - Evidence:
-     - Code: macapp/MeetingListenerApp/Sources/AppState.swift :: pinnedSegmentIDs @Published
-   - Notes: Hypothesized - SwiftUI reactive update
+     - Code: `macapp/MeetingListenerApp/Sources/SidePanel/Shared/SidePanelStateLogic.swift` :: `sanitizeStateForTranscript()`
 
 ## Inputs and Outputs
 
-- Inputs: P key press
-- Outputs: Pin indicator appears/disappears on focused segment
-- Side effects (writes, network calls, model loads, UI state changes): Updates appState.pinnedSegmentIDs
+- Inputs: pin/unpin intent + segment id
+- Outputs: pin state and pins-surface content
+- Side effects (writes, network calls, model loads, UI state changes): focus + overlay navigation updates when opening a pinned item
 
 ## Failure Modes
 
-List 5–10 realistic failures:
+- Failure: Pin requested with no focused segment
+  - Where detected: key handler optional guard
+  - Current handling (as evidenced): no-op
+  - User-visible outcome (if any): no pin state change
+  - Evidence: `macapp/MeetingListenerApp/Sources/SidePanel/Shared/SidePanelStateLogic.swift` :: `if let id = focusedSegmentID`
 
-- Failure: No focused segment
-  - Where detected: handleKeyEvent
-  - Current handling (as evidenced): Guard let id = focusedSegmentID
-  - User-visible outcome (if any): No action
-  - Evidence: Code: macapp/MeetingListenerApp/Sources/SidePanel/Shared/SidePanelStateLogic.swift :: if let id = focusedSegmentID
-
-- Failure: Segment not found in transcript
-  - Where detected: togglePin
-  - Current handling (as evidenced): Find segment by id
-  - User-visible outcome (if any): No pin change
-  - Evidence: Code: macapp/MeetingListenerApp/Sources/SidePanel/Shared/SidePanelStateLogic.swift :: guard let segment = appState.transcriptSegments.first
-
-- Failure: Pin indicator fails to update
-  - Where detected: SwiftUI rendering
-  - Current handling (as evidenced): None evidenced
-  - User-visible outcome (if any): Visual pin not shown/hidden
-  - Evidence: Hypothesized
+- Failure: Transcript churn invalidates pinned id
+  - Where detected: pin sanitization
+  - Current handling (as evidenced): invalid ids dropped automatically
+  - User-visible outcome (if any): pin disappears when source segment no longer exists
+  - Evidence: `macapp/MeetingListenerApp/Sources/SidePanel/Shared/SidePanelStateLogic.swift` :: `intersection(sourceIDs)`
 
 ## Data and Storage
 
-- What data is produced/consumed: pinnedSegmentIDs Set<UUID>
-- Where it is stored (DB/files/userData/etc.): In-memory @Published in AppState
-- Retention / deletion controls (if documented): Persisted? None evidenced
+- What data is produced/consumed: set of pinned transcript UUIDs
+- Where it is stored (DB/files/userData/etc.): in-memory `@State` within side panel
+- Retention / deletion controls (if documented): session/view lifecycle scoped
 
 ## Observability
 
-- Logs/events emitted: None evidenced
-- Correlation IDs / session IDs (if any): None
-- Metrics/traces (if any): None evidenced
+- Logs/events emitted: none
+- Correlation IDs / session IDs (if any): none
+- Metrics/traces (if any): none
 
 ## Open Questions and Follow-up Tasks
 
-- Questions that cannot be answered from current evidence: How are pins visually indicated? Are they persisted?
-- Documentation gaps to fill: Pin UI implementation and persistence
-- Test gaps to add (note only, no implementation): Test pin toggle adds/removes from set</content>
-  <parameter name="filePath">/Users/pranay/Projects/EchoPanel/docs/flows/UI-009.md
+- Questions that cannot be answered from current evidence: none
+- Documentation gaps to fill: none
+- Test gaps to add (note only, no implementation): pin persistence expectations across panel reopen/session boundaries
