--- a/docs/flows/UI-010.md
+++ b/docs/flows/UI-010.md
@@ -3,84 +3,71 @@
 ## Summary
 
 - Origin: Code-only
-- Status: Hypothesized
-- User toggles follow-live mode using Space key, controlling whether transcript auto-scrolls to latest segments.
+- Status: Implemented
+- Follow-live controls whether new transcript keeps focus/scroll at the newest line.
 - Boundaries crossed: UI
-- Primary components (coarse list): SidePanelView, SidePanelStateLogic
+- Primary components (coarse list): SidePanelView, SidePanelStateLogic, SidePanelTranscriptSurfaces
 
 ## Triggers and Preconditions
 
-- Triggers (user action, event, schedule, startup, etc.): User presses Space key while side panel is focused
-- Preconditions (permissions, settings flags, availability, model cached, etc.): Side panel is open
+- Triggers (user action, event, schedule, startup, etc.): Space key, follow toggle switch, jump-live action, manual transcript navigation
+- Preconditions (permissions, settings flags, availability, model cached, etc.): side panel open
 
 ## Sequence (Happy Path)
 
-Use numbered sequence. Each step must include evidence.
-For each step:
-
-1. <what happens>
+1. Follow-live starts enabled (`true`) by default.
    - Evidence:
-     - Code: path :: symbol/event/string
-     - Docs: path :: heading/snippet
-   - Notes: (only if needed)
-
-1. User presses Space key
+     - Code: `macapp/MeetingListenerApp/Sources/SidePanelView.swift` :: `@State var followLive = true`
+2. Space key toggles follow-live.
    - Evidence:
-     - Code: macapp/MeetingListenerApp/Sources/SidePanel/Shared/SidePanelStateLogic.swift :: handleKeyEvent (case 49: space)
-   - Notes: Key code 49 for space
-
-1. followLive toggled
+     - Code: `macapp/MeetingListenerApp/Sources/SidePanel/Shared/SidePanelStateLogic.swift` :: `handleKeyEvent` case `49`
+3. New transcript lines branch behavior by follow-live state.
    - Evidence:
-     - Code: macapp/MeetingListenerApp/Sources/SidePanel/Shared/SidePanelStateLogic.swift :: followLive.toggle()
-   - Notes: Boolean toggle
-
-1. If followLive now true, scroll to bottom triggered
+     - Code: `macapp/MeetingListenerApp/Sources/SidePanelView.swift` :: `.onChange(of: appState.transcriptSegments.count)`
+   - Notes: when `true`, focuses latest + scroll token; when `false`, increments `pendingNewSegments`.
+4. Manual inspect actions disable follow-live (`moveFocus`, `toggleLens`, drag/taps, entity/pin navigation).
    - Evidence:
-     - Code: macapp/MeetingListenerApp/Sources/SidePanel/Shared/SidePanelStateLogic.swift :: followLive @Published, triggers scrollToBottomToken
-   - Notes: Hypothesized - reactive scroll behavior
-
-1. UI updates follow-live indicator and scroll position
+     - Code: `macapp/MeetingListenerApp/Sources/SidePanel/Shared/SidePanelStateLogic.swift` :: `moveFocus`, `toggleLens`, `focusFromTimeline`
+     - Code: `macapp/MeetingListenerApp/Sources/SidePanel/Shared/SidePanelTranscriptSurfaces.swift` :: drag/tap/double-tap set `followLive = false`
+5. `jumpToLive()` restores follow mode, resets pending count, and scrolls to latest.
    - Evidence:
-     - Code: macapp/MeetingListenerApp/Sources/SidePanel/Shared/SidePanelStateLogic.swift :: followLive @Published
-   - Notes: Hypothesized - SwiftUI reactive update
+     - Code: `macapp/MeetingListenerApp/Sources/SidePanel/Shared/SidePanelStateLogic.swift` :: `jumpToLive()`
+     - Code: `macapp/MeetingListenerApp/Sources/SidePanel/Shared/SidePanelTranscriptSurfaces.swift` / `SidePanel/Roll/SidePanelRollViews.swift` / `SidePanel/Compact/SidePanelCompactViews.swift` / `SidePanel/Full/SidePanelFullViews.swift` :: Jump Live buttons
 
 ## Inputs and Outputs
 
-- Inputs: Space key press
-- Outputs: Follow-live mode toggles, auto-scroll enabled/disabled, UI indicator changes
-- Side effects (writes, network calls, model loads, UI state changes): UI state change for followLive, possible scroll to bottom
+- Inputs: follow toggle intent and transcript growth events
+- Outputs: auto-scroll/focus behavior and pending-new-lines indicators
+- Side effects (writes, network calls, model loads, UI state changes): scroll target updates, focus changes, lens reset in jump-live path
 
 ## Failure Modes
 
-List 5–10 realistic failures:
+- Failure: Follow-live disabled while new ASR arrives
+  - Where detected: transcript count change branch
+  - Current handling (as evidenced): accumulates `pendingNewSegments` and surfaces Jump Live affordance
+  - User-visible outcome (if any): no forced auto-scroll until user re-engages
+  - Evidence: `macapp/MeetingListenerApp/Sources/SidePanelView.swift` :: transcript-count change logic
 
-- Failure: Toggle fails to update UI
-  - Where detected: SwiftUI rendering
-  - Current handling (as evidenced): None evidenced
-  - User-visible outcome (if any): Indicator not updated
-  - Evidence: Hypothesized
-
-- Failure: Scroll to bottom fails
-  - Where detected: SwiftUI ScrollView
-  - Current handling (as evidenced): None evidenced
-  - User-visible outcome (if any): Transcript doesn't scroll
-  - Evidence: Hypothesized
+- Failure: Jump-live with no visible segments
+  - Where detected: jump-live helper
+  - Current handling (as evidenced): safely no-ops on missing last segment, still resets flags
+  - User-visible outcome (if any): follow state toggles without crash
+  - Evidence: `macapp/MeetingListenerApp/Sources/SidePanel/Shared/SidePanelStateLogic.swift` :: `jumpToLive()`
 
 ## Data and Storage
 
-- What data is produced/consumed: followLive Bool
-- Where it is stored (DB/files/userData/etc.): In-memory @State/@Published in SidePanelView
-- Retention / deletion controls (if documented): None, resets on view recreation
+- What data is produced/consumed: `followLive`, `pendingNewSegments`, `scrollToBottomToken`, `focusedSegmentID`
+- Where it is stored (DB/files/userData/etc.): in-memory view state
+- Retention / deletion controls (if documented): reset on view/session lifecycle
 
 ## Observability
 
-- Logs/events emitted: None evidenced
-- Correlation IDs / session IDs (if any): None
-- Metrics/traces (if any): None evidenced
+- Logs/events emitted: none
+- Correlation IDs / session IDs (if any): none
+- Metrics/traces (if any): none
 
 ## Open Questions and Follow-up Tasks
 
-- Questions that cannot be answered from current evidence: How is follow-live visually indicated?
-- Documentation gaps to fill: Follow-live UI indicator implementation
-- Test gaps to add (note only, no implementation): Test space toggles follow-live state</content>
-  <parameter name="filePath">/Users/pranay/Projects/EchoPanel/docs/flows/UI-010.md
+- Questions that cannot be answered from current evidence: none
+- Documentation gaps to fill: none
+- Test gaps to add (note only, no implementation): follow-live regression tests covering keyboard + drag + jump interactions
