--- a/docs/flows/AUD-010.md
+++ b/docs/flows/AUD-010.md
@@ -2,118 +2,70 @@
 
 ## Summary
 
-- Origin: Mixed
+- Origin: Mixed (audit hypothesis + staged feature wiring)
 - Status: Partial
-- 1–2 sentence description: Filters silent audio segments on the client before transmission to reduce server load and network bandwidth by ~40%.
-- Boundaries crossed: UI (VAD processing), OS (audio processing), Network (reduced data transmission)
-- Primary components (coarse list): AudioCaptureManager, MicrophoneCaptureManager, Silero VAD model
+- Client-side VAD filtering behavior is not active yet, but staged feature flags and telemetry contract plumbing are implemented.
+- Boundaries crossed: Settings/UI flag surface / websocket start contract / server metrics
+- Primary components (coarse list): BroadcastFeatureManager, BackendConfig, WebSocketStreamer, ws_live_listener.py
 
 ## Triggers and Preconditions
 
-- Triggers: Audio frame received, VAD enabled in settings, model loaded
-- Preconditions: Silero VAD model available on client, sufficient compute resources, VAD enabled flag set
+- Triggers: user toggles staged VAD flag in Broadcast settings; session start handshake; metrics loop
+- Preconditions: websocket session started
 
-## Sequence (Happy Path)
+## Sequence (Current Behavior)
 
-1. **VAD model initialization**
-   - Load Silero VAD model on client startup or first use
-   - Cache model in memory for session duration
+1. Broadcast settings expose a staged `Client-Side VAD` toggle.
    - Evidence:
-     - Code: server/services/vad_filter.py:22-41 (server-side reference)
-     - Docs: docs/audit/audio-pipeline-deep-dive-20260211.md:1029
-
-2. **Audio chunk accumulation**
-   - Buffer 2-3 seconds of audio for VAD analysis
-   - Convert PCM16 to WAV format for Silero input
+     - Code: `macapp/MeetingListenerApp/Sources/BroadcastFeatureManager.swift` :: `useClientVAD` + settings section
+2. Backend config reads the staged VAD flag from user defaults.
    - Evidence:
-     - Code: server/services/vad_filter.py:42-54 (server-side reference)
-     - Docs: docs/audit/audio-pipeline-deep-dive-20260211.md:1036
-
-3. **Speech probability calculation**
-   - Run Silero VAD inference on audio chunk
-   - Get speech probability scores per frame
+     - Code: `macapp/MeetingListenerApp/Sources/BackendConfig.swift` :: `clientVADEnabled`
+3. WebSocket start payload includes `client_features.client_vad_enabled` and telemetry flags.
    - Evidence:
-     - Code: server/services/vad_filter.py:87-95 (server-side reference)
-     - Docs: docs/audit/audio-pipeline-deep-dive-20260211.md:1040
-
-4. **Speech segment extraction**
-   - Identify contiguous speech segments above threshold
-   - Extract timestamp ranges for speech portions
+     - Code: `macapp/MeetingListenerApp/Sources/WebSocketStreamer.swift` :: `sendStart()` payload
+4. Server stores the client VAD staged flag and publishes it in status/metrics/final summary payloads.
    - Evidence:
-     - Code: server/services/vad_filter.py:100-108 (server-side reference)
-     - Docs: docs/audit/audio-pipeline-deep-dive-20260211.md:1050
-
-5. **Audio filtering**
-   - Only transmit speech segments to server
-   - Drop silent portions to save bandwidth
-   - Evidence:
-     - Code: Hypothesized - would modify AudioCaptureManager.swift:255
-     - Docs: docs/flow-atlas-20260211.md:730
-
-6. **Fallback transmission**
-   - If VAD fails, transmit raw audio as fallback
-   - Log VAD failure for debugging
-   - Evidence:
-     - Code: server/services/vad_filter.py:110-112 (server-side reference)
-     - Docs: docs/audit/audio-pipeline-deep-dive-20260211.md:1064
+     - Code: `server/api/ws_live_listener.py` :: start handler + `_metrics_loop` + final summary block
 
 ## Inputs and Outputs
 
 - Inputs:
-  - Raw PCM16 audio frames (16kHz mono)
-  - VAD threshold settings (default 0.5)
+  - UserDefaults staged toggle (`broadcast_useClientVAD`)
+  - Start message `client_features`
 - Outputs:
-  - Filtered audio chunks containing only speech
-  - Speech timestamp metadata
-- Side effects: Reduced network traffic, lower server ASR load, potential speech clipping if VAD too aggressive
+  - Metrics payload fields (`client_vad_enabled`, `client_vad_telemetry_enabled`)
+  - Final summary `client_features`
+- Side effects: observability/contract only; client does not drop/trim frames yet
 
 ## Failure Modes
 
-- Failure: VAD model load failure
-  - Where detected: Model initialization on client
-  - Current handling: Hypothesized - no client VAD implemented
-  - User-visible outcome: Falls back to transmitting all audio
-  - Evidence: server/services/vad_filter.py:22-41
+- Failure: Staged flag enabled expecting immediate filtering behavior
+  - Where detected: runtime behavior (audio path unchanged)
+  - Current handling: flag is telemetry-only groundwork
+  - User-visible outcome: no VAD-based traffic reduction yet
+  - Evidence: `macapp/MeetingListenerApp/Sources/BroadcastFeatureManager.swift` staged note text
 
-- Failure: VAD inference timeout
-  - Where detected: Speech probability calculation exceeds time limit
-  - Current handling: Hypothesized - no timeout handling
-  - User-visible outcome: Audio transmission delayed or dropped
-  - Evidence: docs/audit/audio-pipeline-deep-dive-20260211.md:1059
-
-- Failure: False positive speech detection
-  - Where detected: VAD marks noise as speech
-  - Current handling: Static threshold (0.5), no adaptation
-  - User-visible outcome: Unnecessary audio transmission, wasted bandwidth
-  - Evidence: docs/audit/audio-pipeline-deep-dive-20260211.md:1789
-
-- Failure: False negative speech detection
-  - Where detected: VAD misses actual speech segments
-  - Current handling: No fallback detection of missed speech
-  - User-visible outcome: Speech segments dropped, transcript gaps
-  - Evidence: docs/audit/audio-pipeline-deep-dive-20260211.md:1770
-
-- Failure: Client compute resource exhaustion
-  - Where detected: VAD processing consumes too much CPU/memory
-  - Current handling: Hypothesized - no resource monitoring
-  - User-visible outcome: App performance degradation, audio capture issues
-  - Evidence: docs/flow-atlas-20260211.md:730
+- Failure: Missing/invalid `client_features` object
+  - Where detected: server parser
+  - Current handling: defaults to `False`
+  - User-visible outcome: no behavior change, safe fallback
+  - Evidence: `server/api/ws_live_listener.py` :: `_extract_client_features`
 
 ## Data and Storage
 
-- What data is produced/consumed: VAD model weights, audio chunks, speech probabilities
-- Where it is stored: Client memory (model cached), temporary audio buffers
-- Retention / deletion controls: Model persists across sessions, buffers cleared per chunk
+- What data is produced/consumed: staged VAD booleans in start/status/metrics/final summary payloads
+- Where it is stored: user defaults (client), session state (server), event payloads
+- Retention / deletion controls: session-scoped on server; persistent user preference on client
 
 ## Observability
 
-- Logs/events emitted: VAD load success/failure, speech ratio metrics, filtering efficiency
-- Correlation IDs / session IDs: Session ID for tracking VAD performance
-- Metrics/traces: Speech detection accuracy, bandwidth savings, processing latency
-- Evidence: server/services/vad_filter.py logging (server-side reference)
+- Logs/events emitted: session start log includes `client_vad` flag state
+- Correlation IDs / session IDs: unchanged; carried by existing metrics envelope
+- Metrics/traces: `client_vad_enabled` and `client_vad_telemetry_enabled` in metrics stream
 
 ## Open Questions and Follow-up Tasks
 
-- Questions: What VAD threshold optimizes speech detection vs bandwidth? How to handle VAD model updates?
-- Documentation gaps: Client-side Silero integration, performance impact analysis
-- Test gaps: VAD accuracy testing, bandwidth savings measurement, fallback behavior validation
+- Questions: what local CPU budget and chunking strategy should gate client VAD activation?
+- Documentation gaps: client VAD inference path, fallback policy, safety thresholds
+- Test gaps: audio-quality/latency regression tests when real client VAD processing is introduced
