--- a/docs/flows/NET-003.md
+++ b/docs/flows/NET-003.md
@@ -3,106 +3,83 @@
 ## Summary
 
 - Origin: Code-only
-- Status: Hypothesized
-- Client sends captured PCM audio frames to backend server via WebSocket for real-time ASR processing.
-- Boundaries crossed: Network
-- Primary components (coarse list): WebSocketStreamer, AudioCaptureManager, MicrophoneCaptureManager
+- Status: Implemented
+- Captured PCM frames are encoded to JSON `audio` messages and sent via bounded async queue.
+- Boundaries crossed: Audio capture -> Network
+- Primary components (coarse list): AppState, AudioCaptureManager, MicrophoneCaptureManager, WebSocketStreamer
 
 ## Triggers and Preconditions
 
-- Triggers (user action, event, schedule, startup, etc.): Audio capture produces PCM frames
-- Preconditions (permissions, settings flags, availability, model cached, etc.): WebSocket connected, audio capture active
+- Triggers (user action, event, schedule, startup, etc.): capture callbacks emit PCM frames
+- Preconditions (permissions, settings flags, availability, model cached, etc.): active capture path and websocket task
 
 ## Sequence (Happy Path)
 
-Use numbered sequence. Each step must include evidence.
-For each step:
-
-1. <what happens>
+1. Capture callbacks receive PCM data from system and/or mic.
    - Evidence:
-     - Code: path :: symbol/event/string
-     - Docs: path :: heading/snippet
-   - Notes: (only if needed)
-
-1. Audio capture produces PCM frame
+     - Code: `macapp/MeetingListenerApp/Sources/AppState.swift` :: `audioCapture.onPCMFrame`, `micCapture.onPCMFrame`
+2. App state records diagnostics and forwards frame to streamer.
    - Evidence:
-     - Code: macapp/MeetingListenerApp/Sources/AppState.swift :: audioCapture.onPCMFrame, micCapture.onPCMFrame
-   - Notes: From AudioCaptureManager or MicrophoneCaptureManager
-
-1. AppState receives frame and calls streamer.sendPCMFrame(frame, source)
+     - Code: `macapp/MeetingListenerApp/Sources/AppState.swift` :: `markInputFrame(...)` + `streamer.sendPCMFrame(frame, source: ...)`
+3. Streamer builds `{"type":"audio","source":...,"data":base64}` payload.
    - Evidence:
-     - Code: macapp/MeetingListenerApp/Sources/AppState.swift :: self.streamer.sendPCMFrame(frame, source: source)
-   - Notes: Updates debug counters, marks input frame
-
-1. WebSocketStreamer.sendPCMFrame encodes frame to base64
+     - Code: `macapp/MeetingListenerApp/Sources/WebSocketStreamer.swift` :: `sendPCMFrame(_:,source:)`
+4. JSON send is enqueued on single-threaded operation queue with cap.
    - Evidence:
-     - Code: macapp/MeetingListenerApp/Sources/WebSocketStreamer.swift :: sendPCMFrame encodes Data(frame).base64EncodedString()
-   - Notes: Creates JSON message {"type":"audio","source":"system|mic","data":"base64..."}
-
-1. Message queued in sendQueue for async sending
+     - Code: `macapp/MeetingListenerApp/Sources/WebSocketStreamer.swift` :: `sendQueue.addOperation`, `maxQueuedSends = 100`
+5. Operation sends websocket text frame, waits up to 5s for completion.
    - Evidence:
-     - Code: macapp/MeetingListenerApp/Sources/WebSocketStreamer.swift :: sendQueue.addOperation with maxQueuedSends = 100
-   - Notes: Bounded queue to prevent blocking capture thread
-
-1. Operation sends message via WebSocket
+     - Code: `macapp/MeetingListenerApp/Sources/WebSocketStreamer.swift` :: `task?.send(.string(text))`, semaphore timeout logic
+6. Server consumes `audio` message format.
    - Evidence:
-     - Code: macapp/MeetingListenerApp/Sources/WebSocketStreamer.swift :: task?.send(.string(jsonString))
-   - Notes: Uses URLSessionWebSocketTask.send
-
-1. Backend receives and processes audio for ASR
-   - Evidence:
-     - Docs: docs/WS_CONTRACT.md :: `audio` message format
-   - Notes: Server-side ASR processing
+     - Docs: `docs/WS_CONTRACT.md` :: Client -> server `audio`
 
 ## Inputs and Outputs
 
-- Inputs: PCM audio frame bytes, source string
-- Outputs: JSON message sent over WebSocket
-- Side effects (writes, network calls, model loads, UI state changes): Network data transmission, queue depth management
+- Inputs: PCM bytes, audio source tag (`system`/`mic`)
+- Outputs: websocket JSON text frames
+- Side effects (writes, network calls, model loads, UI state changes): queued sends, warning logs on overflow/timeout
 
 ## Failure Modes
 
-List 5–10 realistic failures:
+- Failure: Queue overflow under sustained pressure
+  - Where detected: pre-enqueue guard
+  - Current handling (as evidenced): drop frame and log warning
+  - User-visible outcome (if any): lower transcript completeness under overload
+  - Evidence: `macapp/MeetingListenerApp/Sources/WebSocketStreamer.swift` :: queue depth guard + warning log
 
-- Failure: Send queue full
-  - Where detected: sendPCMFrame
-  - Current handling (as evidenced): sendQueue.operationCount > maxQueuedSends, drops frame
-  - User-visible outcome (if any): Audio frame dropped, debug counters updated
-  - Evidence: Code: macapp/MeetingListenerApp/Sources/WebSocketStreamer.swift :: if sendQueue.operationCount > maxQueuedSends { return }
+- Failure: Send callback returns error
+  - Where detected: websocket send completion
+  - Current handling (as evidenced): routes to `handleError` and reconnection path
+  - User-visible outcome (if any): reconnecting state
+  - Evidence: `macapp/MeetingListenerApp/Sources/WebSocketStreamer.swift` :: `if let error = sendError { handleError(error) }`
 
-- Failure: WebSocket not connected
-  - Where detected: Operation execution
-  - Current handling (as evidenced): send fails, operation completes without error
-  - User-visible outcome (if any): Frame lost
-  - Evidence: Code: macapp/MeetingListenerApp/Sources/WebSocketStreamer.swift :: task?.send may fail silently
+- Failure: Send completion exceeds 5s wait
+  - Where detected: semaphore timeout
+  - Current handling (as evidenced): warning log; operation continues
+  - User-visible outcome (if any): potential lag/frame loss before reconnect path engages
+  - Evidence: `macapp/MeetingListenerApp/Sources/WebSocketStreamer.swift` :: `StructuredLogger.shared.warning("WebSocket send timeout", ...)`
 
-- Failure: Base64 encoding fails
-  - Where detected: Data.base64EncodedString()
-  - Current handling (as evidenced): None evidenced, assumes success
-  - User-visible outcome (if any): Invalid message sent
-  - Evidence: Hypothesized
-
-- Failure: JSON serialization fails
-  - Where detected: JSONSerialization.data()
-  - Current handling (as evidenced): try? , silent failure
-  - User-visible outcome (if any): Message not sent
-  - Evidence: Code: macapp/MeetingListenerApp/Sources/WebSocketStreamer.swift :: guard let jsonData = try? JSONSerialization.data(withJSONObject: payload)
+- Failure: JSON serialization/string conversion fails
+  - Where detected: `sendJSON`
+  - Current handling (as evidenced): early return
+  - User-visible outcome (if any): that frame is dropped
+  - Evidence: `macapp/MeetingListenerApp/Sources/WebSocketStreamer.swift` :: `guard let data...`, `guard let text...`
 
 ## Data and Storage
 
-- What data is produced/consumed: PCM audio bytes, base64 encoded string
-- Where it is stored (DB/files/userData/etc.): In-memory queue during transmission
-- Retention / deletion controls (if documented): None, transient
+- What data is produced/consumed: transient PCM frame payloads
+- Where it is stored (DB/files/userData/etc.): in-memory send queue only
+- Retention / deletion controls (if documented): queue entries discarded after send/cancel
 
 ## Observability
 
-- Logs/events emitted: None evidenced for individual frames
-- Correlation IDs / session IDs (if any): None
-- Metrics/traces (if any): Queue depth in metrics
+- Logs/events emitted: queue overflow warnings, send-timeout warnings, downstream status changes on errors
+- Correlation IDs / session IDs (if any): connection context retained on streamer/logger
+- Metrics/traces (if any): backend metrics path exists, no dedicated client frame-send metric counter
 
 ## Open Questions and Follow-up Tasks
 
-- Questions that cannot be answered from current evidence: What happens when send fails?
-- Documentation gaps to fill: Send failure handling
-- Test gaps to add (note only, no implementation): Test queue overflow behavior</content>
-  <parameter name="filePath">/Users/pranay/Projects/EchoPanel/docs/flows/NET-003.md
+- Questions that cannot be answered from current evidence: none
+- Documentation gaps to fill: none
+- Test gaps to add (note only, no implementation): deterministic test for queue overflow/drop behavior
