--- a/docs/flows/NET-006.md
+++ b/docs/flows/NET-006.md
@@ -117,5 +117,5 @@ List 5–10 realistic failures:
 
 - Questions that cannot be answered from current evidence: What happens if session expires on server during reconnection?
 - Documentation gaps to fill: Server-side session timeout behavior
-- Test gaps to add (note only, no implementation): Integration test for session state preservation across reconnect</content>
-  <parameter name="filePath">/Users/pranay/Projects/EchoPanel/docs/flows/NET-006.md
+- Test gaps to add (note only, no implementation): Integration test for session state preservation across reconnect
+
