--- a/docs/flows/AUD-007.md
+++ b/docs/flows/AUD-007.md
@@ -20,43 +20,48 @@
      - Code: server/services/diarization.py :: def is_diarization_available() -> bool
      - Code: server/services/diarization.py :: token = os.getenv("ECHOPANEL_HF_TOKEN")
 
-2. Load pyannote pipeline if not cached
+2. Prewarm pyannote pipeline at server startup (optional, enabled by default)
+   - Evidence:
+     - Code: server/main.py :: prewarm_diarization_pipeline(timeout_seconds=...)
+     - Code: server/services/diarization.py :: async def prewarm_diarization_pipeline(timeout_seconds: float = 120.0) -> bool
+
+3. Load pyannote pipeline if not cached
    - Evidence:
      - Code: server/services/diarization.py :: \_PIPELINE = Pipeline.from_pretrained("pyannote/speaker-diarization-3.1", use_auth_token=token)
      - Code: server/services/diarization.py :: def \_get_pipeline() -> Optional["Pipeline"]
 
-3. Concatenate PCM buffers from all sources
+4. Concatenate PCM buffers from all sources
    - Evidence:
      - Code: server/api/ws_live_listener.py :: pcm_buffers_by_source[source_key] = bytearray()
      - Code: server/api/ws_live_listener.py :: pcm_buffer.extend(chunk)
 
-4. Convert PCM16 to float32 waveform tensor
+5. Convert PCM16 to float32 waveform tensor
    - Evidence:
      - Code: server/services/diarization.py :: audio = np.frombuffer(pcm_bytes, dtype=np.int16).astype(np.float32) / 32768.0
      - Code: server/services/diarization.py :: waveform = torch.from_numpy(audio).unsqueeze(0)
 
-5. Run diarization pipeline inference
+6. Run diarization pipeline inference
    - Evidence:
      - Code: server/services/diarization.py :: diarization = pipeline({"waveform": waveform, "sample_rate": sample_rate})
 
-6. Extract speaker segments from diarization results
+7. Extract speaker segments from diarization results
    - Evidence:
      - Code: server/services/diarization.py :: for turn, \_, speaker in diarization.itertracks(yield_label=True)
 
-7. Merge adjacent segments from same speaker
+8. Merge adjacent segments from same speaker
    - Evidence:
      - Code: server/services/diarization.py :: def \_merge_adjacent_segments(segments: List[SpeakerSegment], gap_threshold: float = 0.5)
 
-8. Assign friendly speaker names (Speaker 1, Speaker 2, etc.)
+9. Assign friendly speaker names (Speaker 1, Speaker 2, etc.)
    - Evidence:
      - Code: server/services/diarization.py :: def \_assign_speaker_names(segments: List[SpeakerSegment])
 
-9. Merge speaker labels into transcript by time overlap
+10. Merge speaker labels into transcript by time overlap
    - Evidence:
      - Code: server/services/diarization.py :: def merge_transcript_with_speakers(transcript: List[dict], speaker_segments: List[dict])
      - Code: server/services/diarization.py :: mid = (t0 + t1) / 2.0
 
-10. Include diarization results in final summary
+11. Include diarization results in final summary
     - Evidence:
       - Code: server/api/ws_live_listener.py :: final_summary_json["diarization"] = diarization_result
 
@@ -82,7 +87,7 @@
 
 - Pipeline loading failure:
   - Where detected: Pipeline.from_pretrained() throws
-  - Current handling: Log error, return None
+  - Current handling: Log error, return None (prewarm task logs and continues startup)
   - User-visible outcome: No speaker labels
   - Evidence: Code: server/services/diarization.py :: except Exception as e: logger.error(f"Failed to load diarization pipeline: {e}")
 
@@ -122,4 +127,3 @@
 - Speaker naming: Simple sequential assignment, no persistence across sessions
 - Performance: Batch processing at end, may be slow for long sessions
 - Test gaps: HF token validation, pipeline loading failures, memory limits
-
